Update for Patch v3.11.2 - checksum: 5f4a

--- a/mod/thmod/localisation/english/ancient_relics_events_l_english.yml
+++ b/mod/thmod/localisation/english/ancient_relics_events_l_english.yml
@@ -10,8 +10,8 @@
  crisis.2481.desc:0 "Our forces have captured a partially intact §HContingency Mainframe Core§! attempting to flee their last Machine World shortly before the shielding completed. This incredibly powerful computer was used to plan and maintain the Contingency's building programs, and it will greatly increase our robot and megastructure construction speeds.\n\nSeveral layers of safeguards will have to be put in place, of course, to prevent the resurfacing of any remaining Contingency code, which could result in... unfortunate side effects."
  marauder.710.name:0 "เก็บกู้บัลลังก์ข่าน"
  marauder.710.desc:0 "After sifting through the wreckage of the Great Khan's flagship, our forces found a large blood-stained chair floating in space. We are reasonably certain that this piece of furniture is, in fact, the Great Khan's throne.\n\nThe relic has been placed inside a secure vault."
- story.335.name:0 "Surveyor Activated"
- story.335.desc:0 "We have swept our space with the strong scanning beam of the Surveyor relic, and a previously unknown resource deposit has been identified on §H[chosen_planet.GetName]§!!"
+ story.335.name:0 "เปิดใช้งาน Surveyor แล้ว"
+ story.335.desc:0 "เราได้กวาดหาพื้นที่ของเราด้วยลำแสงสแกนที่แข็งแกร่งของวัตถุโบราณ Surveyor และมีการระบุแหล่งทรัพยากรที่ไม่รู้จักก่อนหน้านี้บนดาว §H[chosen_planet.GetName]§!!"
  precursor.105.name:0 "Reality Perforated"
  precursor.105.desc:0 "For an instant, the fabric of the universe seems to contort and then expand around the ancient Vultaum relic. As reality as we know it slowly reasserts itself, a brief window appears where some of the rules can be subtly rewritten."
  precursor.105.a:0 "Free your mind."
@@ -112,7 +112,7 @@
  ancrel.8002.desc:0 "$ancrel.8000.intro$\n\n$ancrel.8000.success$"
  ancrel.8003.desc:0 "$ancrel.8000.intro$\n\n$ancrel.8000.pay$"
  ancrel.8003.a:0 "Disable that grid."
- ancrel.8003.b:0 "They will have to go around."
+ ancrel.8003.b:0 "พวกเขาจะต้องเดินอ้อมไป"
  ancrel.8010.intro:0 "Our [Root.Owner.GetArchaeologistPlural] working on [From.Planet.GetName] accidentally triggered an array of ancient but still functional sentry guns."
  ancrel.8010.critical:0 "The automated guns rapidly mowed down §H[dead_scientist.GetName]§! and several other [Root.Owner.GetArchaeologistPlural] before they could be disabled."
  ancrel.8010.failure:0 "Several [Root.Owner.GetArchaeologistPlural] were caught in their firing zones. §H[Root.GetLeaderName]§! eventually managed to disable the guns, but there were several fatalities."
@@ -135,17 +135,17 @@
  ancrel.8022.desc:0 "$ancrel.8020.intro$\n\n$ancrel.8020.success$"
  ancrel.8023.desc:0 "$ancrel.8020.intro$\n\n$ancrel.8020.pay$"
  ancrel.8023.a:0 "Disable that droid."
- ancrel.8030.intro:0 "The excavations carried out by our [Root.Owner.GetArchaeologistPlural] on [From.Planet.GetName] have somehow activated several ancient sentinel droids."
+ ancrel.8030.intro:0 "การขุดค้นที่ดำเนินการโดย [Root.Owner.GetArchaeologistPlural] ของเราบนดาว [From.Planet.GetName] ได้เปิดใช้งานหุ่นเฝ้ายามโบราณหลายตัว"
  ancrel.8030.critical:0 "The hostile robots made short work of §H[dead_scientist.GetName]§! before they could be permanently deactivated with weapons fire. "
  ancrel.8030.failure:0 "The hostile robots managed to kill several [Root.Owner.GetArchaeologistPlural] before they could be stopped by §H[Root.GetLeaderName]§!."
  ancrel.8030.success:0 "Luckily, §H[Root.GetLeaderName]§! and the nearby security escort managed to neutralize the hostile robots before they could seriously injure anyone."
  ancrel.8030.pay:0 "The hostile robots have been contained for now, but there is no way past them. Unless they can be neutralized, an alternate route will have to be found."
- ancrel.8030.name:0 "Sentinel Droids"
+ ancrel.8030.name:0 "ดรอยด์เซนติเนล"
  ancrel.8030.desc:0 "$ancrel.8030.intro$\n\n$ancrel.8030.critical$"
  ancrel.8031.desc:0 "$ancrel.8030.intro$\n\n$ancrel.8030.failure$"
  ancrel.8032.desc:0 "$ancrel.8030.intro$\n\n$ancrel.8030.success$"
  ancrel.8033.desc:0 "$ancrel.8030.intro$\n\n$ancrel.8030.pay$"
- ancrel.8033.a:0 "Neutralize those droids."
+ ancrel.8033.a:0 "ทำให้หุ่นพวกนั้นไม่ต่อต้าน"
  asteroid_vault_1:0 "Strange Asteroid"
  asteroid_vault_1_desc:0 "Seemingly unremarkable at first, closer examination of [From.Planet.GetName] has revealed that it is actually an artificial construct designed to mimic a natural asteroid."
  ancrel.101.name:0 "Strange Asteroid"
@@ -827,7 +827,7 @@
  ancrel.8092.desc:0 "$ancrel.8090.intro$\n\n$ancrel.8090.success$"
  ancrel.8093.desc:0 "$ancrel.8090.intro$\n\n$ancrel.8090.pay$"
  ancrel.8093.a:0 "Remove the animals."
- ancrel.8093.b:0 "They will have to go around."
+ ancrel.8093.b:0 "พวกเขาจะต้องเดินอ้อมไป"
  ancrel.8100.intro:0 "Our [Root.Owner.GetArchaeologistPlural] working on [From.Planet.GetName] have reached a highly unstable section of the ruins."
  ancrel.8100.critical:0 "Unfortunately, an entire ceiling collapsed on several [Root.Owner.GetArchaeologistPlural], killing them instantly. §H[dead_scientist.GetName]§! was among them."
  ancrel.8100.failure:0 "Several [Root.Owner.GetArchaeologistPlural] were recently killed when a ceiling collapsed on them. §H[Root.GetLeaderName]§! emerged unscathed from the debris, but work at the site has been momentarily halted."
@@ -839,7 +839,7 @@
  ancrel.8102.desc:0 "$ancrel.8100.intro$\n\n$ancrel.8100.success$"
  ancrel.8103.desc:0 "$ancrel.8100.intro$\n\n$ancrel.8100.pay$"
  ancrel.8103.a:0 "Safety first. Stabilize those ruins."
- ancrel.8103.b:0 "They will have to go around."
+ ancrel.8103.b:0 "พวกเขาจะต้องเดินอ้อมไป"
  ancrel.8110.name:0 "Ancient Records"
  ancrel.8110.desc:0 "Ancient, partially translated records have been discovered amongst the ruins being excavated on [From.Planet.GetName]. §H[Root.GetLeaderName]§! reports that the records contain several technical specifications that may be of value to our scientists."
  ancrel.6049.name:0 "Fossils Discovered on [Root.GetName]"
@@ -1064,16 +1064,16 @@
  ancrel.12030.desc.machine:0 "$ancrel.12030.desc.base$ Our [Owner.GetResearchers] are in no doubt that these remains are what's left of our missing [Owner.GetTeamMember], but they are baffled as to how their unit corroded away quite this quickly. They urge caution as we continue our investigations."
  ancrel.12035.name:0 "Troubles in Paradise"
  ancrel.12035.desc:0 "As we interpret the data crystals from the caves on [From.Planet.GetName], we begin piecing together a picture of a troubled planet.\n\nThe planet was once the center of a prosperous civilization known as the Ilanii Foundation. During that civilization's latter years, the Ilanii turned more and more to the hoarding of knowledge instead of more material matters such as procreation. As a result, their population fell rapidly. Alarmed by their dwindling numbers, their leaders attempted to find a technological solution for immortality. Records become scarcer around this point - though it appears to predate whatever cataclysm forced them underground - and it is not clear yet what results their efforts yielded."
- ancrel.12040.name:0 "Civilization's End"
+ ancrel.12040.name:0 "จุดจบของอารยธรรม"
  ancrel.12040.desc.base:0 "We can now piece together what became of the Ilanii's attempt at immortality. It appears that, far from bringing them everlasting life, they created a terrible menace - a swarm of microorganisms capable of multiplying rapidly and almost instantly devouring any organic matter... as must have happened to our team's lost member.\n\nThe resulting cataclysm wiped out much of the population. The survivors splintered into two groups: one, unwilling to give up [From.Planet.GetName], took to the depths, recreating their civilization in air-tight pockets such as the one we found. However, this solution proved unsustainable in the long run, and eventually the microorganism found its way into their habitats; the caves became their tombs.\n\nThe other group instead went into exile, enforcing a planetary quarantine by utterly obliterating the surface, rendering it uninhabitable."
  ancrel.12040.desc.curators:0 "$ancrel.12040.desc.base$ They would henceforth live in small enclaves and dedicate themselves to preserving the lost knowledge of their civilization, eventually morphing into one of the ancestors of the modern §H[curator_enclave_country.GetName]§!."
  ancrel.12040.desc.meet_curators:0 "$ancrel.12040.desc.base$ They would henceforth live in small enclaves and dedicate themselves to preserving the lost knowledge of their civilization. Their ultimate fate is unknown to us, but one of the data crystals indicates they were headed for the §H[curator_poi.GetName]§! system."
  ancrel.12040.desc.no_curators:0 "$ancrel.12040.desc.base$ Their ultimate fate is lost to time, but it seems they intended to dedicate the remainder of their existence to preserving the lost knowledge of their civilization."
- ancrel.12040.A:0 "This microorganism will make a fine weapon."
- ancrel.12040.B:0 "Quarantine the planet, allowing only careful study."
+ ancrel.12040.A:0 "จุลินทรีย์ชนิดนี้สามารถสร้างอาวุธชั้นดีได้"
+ ancrel.12040.B:0 "กักกันดาวดวงนี้และให้มีการศึกษาอย่างรอบคอบเท่านั้น"
  ancient_glassed_planet:0 "Glassed Planet"
  ancient_glassed_planet_desc:0 "In the distant past, this planet's biosphere was utterly annihilated, cleansing it of all forms of life."
- killer_librarian_organism:0 "Killer Microorganism"
+ killer_librarian_organism:0 "จุลชีพนักฆ่า"
  killer_librarian_organism_desc:1 "Our armies go into battle armed with a microorganism capable of devouring the life tissue of any being with ferocious speed. Of course, they cannot entirely guarantee the safety of innocent bystanders as a result of its use..."
  find_the_curators_title:0 "Remnant of a Remnant"
  find_the_curators_desc:0 "Our investigations suggest that the remnants of a civilization dedicated to the accumulation of knowledge sought their refuge in the §H[curator_poi.GetName]§! system."
