--- a/mod/thmod/localisation/english/ancient_relics_l_english.yml
+++ b/mod/thmod/localisation/english/ancient_relics_l_english.yml
@@ -99,7 +99,7 @@
  DESTROY_ARCHAEOLOGIC_SITE:0 "Destroy the $NAME|Y$ archaeological site\n"
  FLEETORDER_EXCAVATE_BUTTON:0 "ขุดค้นแหล่งโบราณคดี"
  FLEETORDER_EXCAVATE_SITE:0 "กำลังขุดค้นแหล่งโบราณคดี"
- ADD_STAGE_CLUES_EFFECT:1 "Adds $CLUES$ clue(s)"
+ ADD_STAGE_CLUES_EFFECT:1 "เพิ่มเบาะแส $CLUES$"
  RESET_CURRENT_STAGE_EFFECT:0 "Resets current stage"
  SET_CURRENT_STAGE_EFFECT:0 "Sets current stage to §YChapter $VALUE$§!"
  FINISH_CURRENT_STAGE_EFFECT:0 "Finish current stage"
@@ -284,13 +284,13 @@
  artifact_arcane_deciphering_locked:0 "$artifact_action_locked$"
  artifact_arcane_deciphering_locked_desc:0 "$artifact_action_locked_desc$"
  ancrel.10040.name:0 "โครงการพิเศษปลดล็อก"
- ancrel.10040.desc:0 "Our scientists have begun a special project to study the deeper secrets of the precursors."
+ ancrel.10040.desc:0 "นักวิทยาศาสตร์ของเราได้เริ่มโครงการพิเศษ เพื่อศึกษาความลับของจักรวรรดิแรกเริ่ม (พรีเคอร์เซอร์)"
  artifact_irassian_research:0 "ความลับของ Irassian"
  artifact_irassian_research_desc:0 "Delve deeper into the secrets of the Irassians."
  artifact_irassian_research_completed:0 "$artifact_irassian_research$"
  artifact_irassian_research_completed_desc:0 "We have put the ancient knowledge of the Irassians to our own use."
- IRASSIAN_SECRETS:0 "Delve into the Secrets of the Irassians"
- IRASSIAN_SECRETS_DESC:0 "Our scientists will carefully sift through all of the data we have collected, seeking to add the knowledge of the Irassians to our own."
+ IRASSIAN_SECRETS:0 "เจาะลึกความลับของ Irassian"
+ IRASSIAN_SECRETS_DESC:0 "นักวิทยาศาสตร์ของเราจะกลั่นกรองข้อมูลทั้งหมดที่เรารวบรวมไว้อย่างระมัดระวัง โดยพยายามเพิ่มความรู้เกี่ยวกับ Irassians"
  ancrel.9001:0 "$artifact_irassian_research$"
  ancrel.9001.name:0 "$artifact_irassian_research$"
  ancrel.9001.desc:0 "We have successfully managed to integrate the Irassian artifacts into our research process. Their insights into biological research will greatly aid our own."
@@ -300,8 +300,8 @@
  artifact_yuht_research_desc:0 "Delve deeper into the secrets of the Yuht."
  artifact_yuht_research_completed:0 "$artifact_yuht_research$"
  artifact_yuht_research_completed_desc:0 "We have put the ancient knowledge of the Yuht to our own use."
- YUHT_SECRETS:0 "Delve into the Secrets of the Yuht"
- YUHT_SECRETS_DESC:0 "Our scientists will carefully sift through all of the data we have collected, seeking to add the knowledge of the Yuht to our own."
+ YUHT_SECRETS:0 "เจาะลึกความลับของ Yuht"
+ YUHT_SECRETS_DESC:0 "นักวิทยาศาสตร์ของเราจะกลั่นกรองข้อมูลทั้งหมดที่เรารวบรวมไว้อย่างระมัดระวัง โดยพยายามเพิ่มความรู้เกี่ยวกับ Yuht"
  ancrel.10050:0 "$artifact_yuht_research$"
  ancrel.10050.name:0 "$artifact_yuht_research$"
  ancrel.10050.desc.1:0 "We have managed to recreate the cleansing process that the Yuht would use to prepare their hatchery worlds.\n\n$ancrel.10050.desc.2$"
@@ -315,8 +315,8 @@
  pm_yuht_cleansing_desc:0 "This planet was violently cleansed of most hostile wildlife."
  artifact_vultaum_research:0 "ความลับของ Vultaum"
  artifact_vultaum_research_desc:0 "Delve deeper into the secrets of the Vultaum."
- VULTAUM_SECRETS:0 "Delve into the Secrets of the Vultaum"
- VULTAUM_SECRETS_DESC:0 "Our scientists will carefully sift through all of the data we have collected, seeking to add the knowledge of the Vultaum to our own."
+ VULTAUM_SECRETS:0 "เจาะลึกความลับของ Vultaum"
+ VULTAUM_SECRETS_DESC:0 "นักวิทยาศาสตร์ของเราจะกลั่นกรองข้อมูลทั้งหมดที่เรารวบรวมไว้อย่างระมัดระวัง โดยพยายามเพิ่มความรู้เกี่ยวกับ Vultaum"
  ancrel.10100:0 "$artifact_vultaum_research$"
  ancrel.10100.name:0 "$artifact_vultaum_research$"
  vultaum_artifact_research_unlocked:0 "ศิลปวัตถุชั้นรอง การกระทำที่ถูกปลดล็อก: §Y$artifact_vultaum_research$§!"
@@ -351,8 +351,8 @@
  artifact_league_research_desc:0 "Delve deeper into the secrets of the First League."
  artifact_league_research_completed:0 "$artifact_league_research$"
  artifact_league_research_completed_desc:0 "We have put the ancient knowledge of the First League to our own use."
- LEAGUE_SECRETS:0 "Delve into the Secrets of the First League"
- LEAGUE_SECRETS_DESC:0 "Our scientists will carefully sift through all of the data we have collected, seeking to add the knowledge of the First League to our own."
+ LEAGUE_SECRETS:0 "เจาะลึกความลับของ First League"
+ LEAGUE_SECRETS_DESC:0 "นักวิทยาศาสตร์ของเราจะกลั่นกรองข้อมูลทั้งหมดที่เรารวบรวมไว้อย่างระมัดระวัง โดยพยายามเพิ่มความรู้เกี่ยวกับ First League"
  ancrel.10200:0 "$artifact_league_research$"
  ancrel.10200.name:0 "$artifact_league_research$"
  ancrel.10200.desc:0 "We have successfully managed to integrate the First League artifacts into our research process. Their insights into industrial research will greatly aid our own."
@@ -362,8 +362,8 @@
  artifact_cybrex_research_desc:0 "Delve deeper into the secrets of the Cybrex."
  artifact_cybrex_research_completed:0 "$artifact_cybrex_research$"
  artifact_cybrex_research_completed_desc:0 "We have put the ancient knowledge of the Cybrex to our own use."
- CYBREX_SECRETS:0 "Delve into the Secrets of the Cybrex"
- CYBREX_SECRETS_DESC:0 "Our scientists will carefully sift through all of the data we have collected, seeking to add the knowledge of the Cybrex to our own."
+ CYBREX_SECRETS:0 "เจาะลึกความลับของ Cybrex"
+ CYBREX_SECRETS_DESC:0 "นักวิทยาศาสตร์ของเราจะกลั่นกรองข้อมูลทั้งหมดที่เรารวบรวมไว้อย่างระมัดระวัง โดยพยายามเพิ่มความรู้เกี่ยวกับ Cybrex"
  ancrel.10250:0 "$artifact_cybrex_research$"
  ancrel.10250.name:0 "$artifact_cybrex_research$"
  ancrel.10250.desc:0 "We have successfully managed to integrate the Cybrex artifacts into our research process. Their insights into megastructure engineering will greatly aid our own."
@@ -373,8 +373,8 @@
  artifact_baol_research_desc:0 "Delve deeper into the secrets of the Baol."
  artifact_baol_research_completed:0 "$artifact_baol_research$"
  artifact_baol_research_completed_desc:0 "We have put the ancient knowledge of the Baol to our own use."
- BAOL_SECRETS:0 "Delve into the Secrets of the Baol"
- BAOL_SECRETS_DESC:0 "Our scientists will carefully sift through all of the data we have collected, seeking to add the knowledge of the Baol to our own."
+ BAOL_SECRETS:0 "เจาะลึกความลับของ Baol"
+ BAOL_SECRETS_DESC:0 "นักวิทยาศาสตร์ของเราจะกลั่นกรองข้อมูลทั้งหมดที่เรารวบรวมไว้อย่างระมัดระวัง โดยพยายามเพิ่มความรู้เกี่ยวกับ Baol"
  ancrel.10300:0 "$artifact_baol_research$"
  ancrel.10300.name:0 "$artifact_baol_research$"
  ancrel.10300.desc.terraform:0 "Studying the Baol has given us new insights into the spread of plant life and improved our terraforming processes.\n\nBy carefully tracking the changes that the Baol underwent during their loss of sentience we also learned much about the uplifting process, but have already mastered that technology."
@@ -384,8 +384,8 @@
  artifact_zroni_research_desc:0 "Delve deeper into the secrets of the Zroni."
  artifact_zroni_research_completed:0 "$artifact_zroni_research$"
  artifact_zroni_research_completed_desc:0 "We have put the ancient knowledge of the Zroni to our own use."
- ZRONI_SECRETS:0 "Delve into the Secrets of the Zroni"
- ZRONI_SECRETS_DESC:0 "Our scientists will carefully sift through all of the data we have collected, seeking to add the knowledge of the Zroni to our own."
+ ZRONI_SECRETS:0 "เจาะลึกความลับของ Zroni"
+ ZRONI_SECRETS_DESC:0 "นักวิทยาศาสตร์ของเราจะกลั่นกรองข้อมูลทั้งหมดที่เรารวบรวมไว้อย่างระมัดระวัง โดยพยายามเพิ่มความรู้เกี่ยวกับ Zroni"
  ancrel.10350:0 "$artifact_zroni_research$"
  ancrel.10350.name:0 "$artifact_zroni_research$"
  ancrel.10350.desc:0 "We have successfully managed to integrate the Zroni artifacts into our research process. Their insights into psionic study will greatly aid our own."
@@ -440,19 +440,19 @@
  relic_queen_spawn:1 "Breed a sizeable Prethoryn fleet"
  relic_rubricator_active:2 "Create §Y500§! £minor_artifacts£Minor Artifacts."
  relic_galaxy_active:0 "Gain §Y50%§! tech progress in a random technology."
- relic_zro_crystal_passive:5 "The cooldown to §YBreach into the Shroud§! is reduced by §G50%§!.\nGrants access to the §Y$edict_zro_crystal$§! edict, which increases leader experience gain and longevity."
- edict_zro_crystal:0 "Zro Additives"
- edict_zro_crystal_desc:0 "The properties of Zro are mysterious. Yet if given to our leaders, it seems they obtain slight precognitive abilities, allowing them to learn faster and avoid dangers that could have ended their lives early."
+ relic_zro_crystal_passive:5 "- เวลาคูลดาวน์ในการ §Yเข้าถึงดินแดนพลังจิตบริสุทธิ์§! ลดลง §G50%§!\n- สามารถใช้ประกาศคำสั่ง §Y$edict_zro_crystal$§! ที่จะเพิ่มค่าประสบการณ์และอายุของผู้นำได้"
+ edict_zro_crystal:0 "ใช้สารปรุงแต่งซีโรกับผู้นำ"
+ edict_zro_crystal_desc:0 "คุณสมบัติของแร่ซีโรนั้นลึกลับ แต่ถ้ามอบให้กับผู้นำของเรา ก็ดูเหมือนว่าพวกเขาจะมีความสามารถในการรับรู้เหตุการณ์ล่วงหน้าได้เล็กน้อย ทำให้พวกเขาเรียนรู้ได้เร็วขึ้นและหลีกเลี่ยงอันตรายที่อาจถึงแก่ชีวิตก่อนวัยอันควร"
  edict_zro_crystal_machine:0 "$edict_zro_crystal$"
  edict_zro_crystal_machine_desc:0 "The properties of Zro are mysterious. Yet if sprinkled on our leader's motherboards, it seems to grant them slight precognitive abilities, allowing them to learn faster and avoid dangers that could have ended their existence."
  edict_zro_crystal_machine_effect:0 "Machine leaders are §Y50%§! less likely to suffer breakdowns and accidents."
- relic_zro_crystal_active:0 "Contact the spirit of §Y$relic_zro_entity_name$§! to seek guidance in different matters."
+ relic_zro_crystal_active:0 "ติดต่อกับวิญญาณของ §Y$relic_zro_entity_name$§! เพื่อขอคำแนะนำในเรื่องต่างๆได้"
  relic_zro_entity_name:0 "Ja'Baxti"
  relic_omicodex_opinon:0 "§G+25§! opinion with §YNon-Robotic§! empires."
  relic_omnicodex_active:2 "§Yกำเนิดประชากรใหม่§! จากสิ่งมีชีวิตเผ่าพันธุ์ที่สูญพันธุ์บนดาวเคราะห์ดวงใดดวงหนึ่งของคุณ"
  relic_orb_active:0 "§Y[Root.GetRulerTitle] [Root.GetRulerName]§! gains §Y500§! experience."
  relic_galatron_active:0 "The Galatron randomly spews forth resources"
- relic_surveyor_active:0 "Scan planets in your territory for new resource deposits"
+ relic_surveyor_active:0 "สแกนดาวเคราะห์ในเขตแดนของคุณเพื่อหาแหล่งทรัพยากรใหม่"
  r_dragon_trophy:0 "Ether Drake Trophy"
  r_dragon_trophy_desc:0 "A trophy commemorating our victory over the nefarious Ether Drake. Were it not for its immense size, it would look good mounted on a wall."
  r_khans_throne:0 "บัลลังก์ข่าน"
@@ -511,9 +511,9 @@
  unbidden_ritual:0 "Unbidden Ritual"
  contingency_calculation:0 "Contingency Calculation"
  contingency_calculation_desc:0 "$r_contingency_core_desc$"
- relic_zro_crystal_knowledge:1 "§Y[Root.GetRulerTitle] [Root.GetRulerName]§! gains §G1§! level."
- relic_zro_crystal_martial:0 "Martial Guidance"
- relic_zro_crystal_state:0 "Statecraft Guidance"
+ relic_zro_crystal_knowledge:1 "§Y[Root.GetRulerTitle] [Root.GetRulerName]§! ได้รับ §G1§! เลเวล"
+ relic_zro_crystal_martial:0 "คำแนะนำเรื่องการสู้รบ"
+ relic_zro_crystal_state:0 "คำแนะนำเรื่องการปกครอง"
  cybrex_war_forge:0 "$r_war_forge$"
  yuht_cryo_core:0 "$r_cryo_core$"
  javorian_pox:0 "$r_pox_sample$"
@@ -561,13 +561,13 @@
  ancrel.7004.desc:0 "Further investigation reveals that the primary purpose of this site seems to have been in the research and development of biological agents. The whole complex seems to have been purged by fire, possibly as the result of the accidental release of one of the biological agents being developed here. With careful and meticulous study of the artifacts that remain, some clues may be found."
  ancrel.7005.name:0 "Ancient Weapons Lab"
  ancrel.7005.desc:0 "Further investigation reveals that the primary purpose of this site seems to have been in the research and development advanced energy weapons. An accident seems to have triggered a catastrophic explosion, which eradicated most of the site. One data-center seems to be in relatively good condition, perhaps its data will yield some useful insights?"
- ancrel.7006.name:0 "Psionic Guidance"
+ ancrel.7006.name:0 "คำแนะนำจากกระแสจิต"
  ancrel.7006.1.desc:1 "As we touch the Soulstone, we are projected in to a microcosm of the Shroud. We become aware that we are not alone in this swirling twilight realm. There is an entity awaiting us, one immeasurably ancient. A keeper of secrets. $relic_zro_entity_name$, we instinctively know.\n\nHaving passed the test of making contact with it, the entity awaits our questions."
  ancrel.7006.2.desc:1 "The Soulstone, pulsing with inner light, seems to wordlessly beckon. We touch it, and our minds are drawn in to a pocket dimension of the Shroud, where the enigmatic entity called $relic_zro_entity_name$ awaits.\n\nIt knows things no mortal being could know, and seems willing to share its secrets now that we have reached its sanctum."
  ancrel.7006.3.desc:1 "Something awaits us inside the Soulstone. $relic_zro_entity_name$. It's been waiting for us since before we were alive.\n\nTouching the stone ushers us in to the intangible place where it dwells. Alone for ages with only its own thoughts for company, the entity seems eager to answer our questions using all its arcane wisdom, although whether it does this to help, or for mere sport, is a mystery."
- ancrel.7006.a:0 "Ask $relic_zro_entity_name$ to share an insight"
- ancrel.7006.b:0 "Ask $relic_zro_entity_name$ about matters martial"
- ancrel.7006.c:0 "Ask $relic_zro_entity_name$ about matters of state"
+ ancrel.7006.a:0 "ขอให้ $relic_zro_entity_name$ แบ่งปันข้อมูลเชิงลึก"
+ ancrel.7006.b:0 "ถาม $relic_zro_entity_name$ เรื่องการรบ"
+ ancrel.7006.c:0 "ถาม $relic_zro_entity_name$ เรื่องเกี่ยวกับรัฐ"
  ancrel.7007.name:0 "$r_galaxy$"
  ancrel.7007.desc:1 "Time flows faster inside the miniature galaxy, and by carefully observing its denizens we are able to learn much when comes to advanced technologies."
  district_rw_farming:0 "ส่วนการเกษตร"
