--- a/mod/thmod/localisation/english/astral_rifts_0_l_english.yml
+++ b/mod/thmod/localisation/english/astral_rifts_0_l_english.yml
@@ -404,9 +404,9 @@
  astral_rift.825.name: "Scrapping the Machine"
  astral_rift.825.desc: "Piece by piece, we deconstructed the machine to its component parts.\n\nWhoever built it (if it was indeed built by anyone), possessed a supreme mastery of fabrication: no matter our approach or tool, we have thus far been unable to disassemble the computer core for parts. However, we were able to access its data banks. Though it contained mostly useless information, the architecture of its codebase has helped us further our understanding of computer science."
  astral_rift.825.a: "Very well."
- astral_rift.830.name: "Good Riddance"
+ astral_rift.830.name: "โชคดีนะ"
  astral_rift.830.desc: "We have had enough of this insufferable machine.\n\nWe have rigged an explosive device in its core, and prepared the Sphere's systems for anchor retrieval.\n\nAt a safe distance, we watched in relief as the blast scattered the machine's components across the void.\n\nIn its wake we discovered an anomalous amount of astral material, a reasonable consolation for the annoyance."
- astral_rift.830.a: "Good riddance."
+ astral_rift.830.a: "โชคดีนะ"
  astral_rift.840.name: "[Owner.GetScientistCapital] returns"
  astral_rift.840.desc.1: "[Leader.GetName] [Leader.GetHasHave] returned from [Leader.GetHisHer] journey inside one of the Astral Rifts.\n\nWithout warning, [Root.Leader.GetHeShe] simply appeared aboard one of our science ships and proceeded to return to work as normal. However, it quickly became obvious that [Leader.GetHeShe] [Leader.GetWasWere] changed: caught somehow between time, [Leader.GetHisHer] age is indeterminable.\n\nPerhaps as a result, [Leader.GetHeShe] [Leader.GetHasHave] also gained some new abilities."
  astral_rift.840.desc.default: "$astral_rift.840.desc.1$\n\n[Leader.GetName] [Leader.GetHasHave] developed a strong aversion to any sort of instructional manual, and has been observed operating with a much higher degree of improvisation."
