--- a/mod/thmod/localisation/english/events_2_l_english.yml
+++ b/mod/thmod/localisation/english/events_2_l_english.yml
@@ -887,7 +887,7 @@
  story.223.desc.gesta:0 "The crystalline construct observed in a distant system has been destroyed, and remote study is no longer possible."
  story.223.a:0 "A shame."
  story.223.a.tooltip:0 "The §HCrystalline Construct§! Special Project is canceled."
- story.301.name:0 "Ancient Mining Drones"
+ story.301.name:0 "โดรนขุดแร่โบราณ"
  story.301.desc.pacif:1 "Reports of deep-space drones in certain systems have been investigated. The drones appear to be the workers and custodians of an autonomous orbital mining operation, established millennia ago and then soon abandoned by all but the drones themselves, judging by the state of the processing equipment.\n\nThe drones seem to lack any diplomatic comms protocols - at least any decipherable by the [Root.Owner.GetName] - and react with hostility to [Root.Owner.GetSpeciesAdj] ships entering the system.\n\nTheir presence in the [Root.System.GetName] system is intriguing, and we should attempt to learn more about them."
  story.301.desc.mater:1 "Reports of deep-space drones in certain systems have been investigated. The drones appear to be the workers and custodians of an autonomous orbital mining operation, established millennia ago and then soon abandoned by all but the drones themselves, judging by the state of the processing equipment. Their purpose is obvious enough - mining - but who it is that tasked them is not immediately apparent. What is obvious is that no shipment of minerals has been retrieved from this system in hundreds, if not thousands of years.\n\nThey may only be old drones, but they should be kept under close watch by the [Root.Owner.GetName]."
  story.301.desc:1 "Reports of deep-space drones in certain systems have been investigated. The drones appear to be the workers and custodians of an autonomous orbital mining operation, established millennia ago and then soon abandoned by all but the drones themselves, judging by the state of the processing equipment. The drones possess powerful mining lasers and make obviously threatening, if not outright hostile, overtures toward [Root.Owner.GetSpeciesAdj] vessels when approached.\n\nThey may only be old drones, but they should be kept under close watch by the [Root.Owner.GetName]."
@@ -1344,7 +1344,7 @@
  fallen_empire_happy_tooltip:0 "§H[FallenEmpireTaskOrigin.GetName]§! จะยินดีและชื่นชอบเราในภายภาคหน้า"
  fallen_empire_unhappy_tooltip:0 "§H[FallenEmpireTaskOrigin.GetName]§! จะไม่พอใจ"
  fallen_empire_angry_tooltip:0 "§H[FallenEmpireTaskOrigin.GetName]§! will be most displeased, and may decide to teach us a lesson."
- fallen_empire_enigmatic_tooltip:0 "§H[FallenEmpireTaskOrigin.GetName]§! may or may not react to our refusal."
+ fallen_empire_enigmatic_tooltip:0 "§H[FallenEmpireTaskOrigin.GetName]§! อาจตอบสนองหรือไม่ตอบสนองต่อการปฏิเสธของเรา"
  fe_gift_ship:0 "Gifted Ship"
  gave_up_pop:0 "Surrendered our Population"
  gave_up_pop_xenophobe:0 "Surrendered our Population"
@@ -1618,7 +1618,7 @@
  war_in_heaven.22.a:0 "A bold move."
  nomad.9.desc:0 "The galactic nomads aboard the Pursuing Waters fleet have sent us a parting message. They are leaving our galaxy from the outer rim and setting sail towards their next destination. Where will they end up next? Will they ever find what they are searching for?"
  nomad.9.a:0 "One wonders..."
- nomad.9.a.phobe:0 "Good riddance."
+ nomad.9.a.phobe:0 "โชคดีนะ"
  nomad.9.c.phile:0 "Fly safe."
  nomad.10.name:0 "Galactic Nomads"
  nomad.10.desc:0 "Cold days and warm nights upon you, [Root.GetAdj] [Root.GetRulerTitle]. We are [contact_speaker_leader.GetName]. We speak on behalf of all the Namarian souls aboard the collected ships of the Pursuing Waters, our nomadic fleet.\n\nYou have nothing to fear from us, as the fleet has no interest in orb-bound affairs. We ask only that you respect our autonomy and do not hinder us on our journey."
