--- a/mod/thmod/localisation/english/events_6_l_english.yml
+++ b/mod/thmod/localisation/english/events_6_l_english.yml
@@ -1331,23 +1331,23 @@
  orbital_cleanup_DESC: "The orbit of [Root.GetName] is littered with space debris after a collision in the lower atmosphere. It must be cleared before a cascading effect renders the planet inaccessible."
  orbital_cleanup_intense: "Intense Orbital Clean-Up"
  orbital_cleanup_intense_DESC: "The orbit of [Root.GetName] is littered with space debris after a collision in the lower atmosphere. It must be thoroughly cleaned to ensure a secure future for the inhabitants, regardless of the cost."
- job_astrogarbage_collector: "Astrogarbage Collector"
- job_astrogarbage_collector_plural: "Astrogarbage Collectors"
+ job_astrogarbage_collector: "นักเก็บขยะอวกาศ"
+ job_astrogarbage_collector_plural: "นักเก็บขยะอวกาศ"
  job_astrogarbage_collector_desc: "A special unit responsible for collecting space debris from planetary orbit."
- job_astrogarbage_collector_add: "$job_astrogarbage_collector$ Jobs"
- job_astrogarbage_collector_per_pop: "§G+1§! $job_astrogarbage_collector$ Job per $VALUE$ Pops"
- mod_job_astrogarbage_collector_add: "$job_astrogarbage_collector$ Jobs"
- mod_job_astrogarbage_collector_per_pop: "§G+1§! $job_astrogarbage_collector$ Job per $VALUE$ Pops"
- mod_job_astrogarbage_collector_per_pop_short: "\n§G+1§! £job_astrogarbage_collector£ per $VALUE$ £pop£"
- job_astrogarbage_collector_gestalt: "Astrogarbage Drone"
- job_astrogarbage_collector_gestalt_plural: "Astrogarbage Drones"
+ job_astrogarbage_collector_add: "งาน $job_astrogarbage_collector$"
+ job_astrogarbage_collector_per_pop: "§G+1§! อาชีพ $job_astrogarbage_collector$ ต่อ $VALUE$ ประชากร"
+ mod_job_astrogarbage_collector_add: "งาน $job_astrogarbage_collector$"
+ mod_job_astrogarbage_collector_per_pop: "§G+1§! อาชีพ $job_astrogarbage_collector$ ต่อ $VALUE$ ประชากร"
+ mod_job_astrogarbage_collector_per_pop_short: "\n§G+1§! £job_astrogarbage_collector£ ต่อ $VALUE$ £pop£"
+ job_astrogarbage_collector_gestalt: "โดรนเก็บขยะอวกาศ"
+ job_astrogarbage_collector_gestalt_plural: "โดรนเก็บขยะอวกาศ"
  job_astrogarbage_collector_gestalt_desc: "A special drone unit responsible for collecting space debris from planetary orbit."
- job_astrogarbage_collector_gestalt_add: "$job_astrogarbage_collector_gestalt$ Jobs"
- job_astrogarbage_collector_gestalt_per_pop: "§G+1§! $job_astrogarbage_collector_gestalt$ Job per $VALUE$ Pops"
- mod_job_astrogarbage_collector_gestalt_add: "$job_astrogarbage_collector_gestalt$ Jobs"
- mod_job_astrogarbage_collector_gestalt_per_pop: "§G+1§! $job_astrogarbage_collector_gestalt$ Job per $VALUE$ Pops"
- mod_job_astrogarbage_collector_gestalt_per_pop_short: "\n§G+1§! £job_astrogarbage_collector_gestalt£ per $VALUE$ £pop£"
- d_astrogarbage_collector: "Astrogarbage Unit"
+ job_astrogarbage_collector_gestalt_add: "งาน $job_astrogarbage_collector_gestalt$"
+ job_astrogarbage_collector_gestalt_per_pop: "§G+1§! อาชีพ $job_astrogarbage_collector_gestalt$ ต่อ $VALUE$ ประชากร"
+ mod_job_astrogarbage_collector_gestalt_add: "งาน $job_astrogarbage_collector_gestalt$"
+ mod_job_astrogarbage_collector_gestalt_per_pop: "§G+1§! อาชีพ $job_astrogarbage_collector_gestalt$ ต่อ $VALUE$ ประชากร"
+ mod_job_astrogarbage_collector_gestalt_per_pop_short: "\n§G+1§! £job_astrogarbage_collector_gestalt£ ต่อ $VALUE$ £pop£"
+ d_astrogarbage_collector: "ยูนิตเก็บขยะอวกาศ"
  d_astrogarbage_collector_desc: "By reducing the amount of orbital debris, this world hopes to maintain its spacefaring capabilities."
  d_sprawling_landfill_blocker: "Spreading Landfill"
  d_sprawling_landfill_blocker_desc: "Endless hills of trash, rapidly sprawling out of their designated zones."
