--- a/mod/thmod/localisation/english/events_l_english.yml
+++ b/mod/thmod/localisation/english/events_l_english.yml
@@ -790,7 +790,7 @@
  anomaly.5009.b:0 "Sigh... very well."
  anomaly.5009.b.response:0 "Excellent. Hopefully this won't put too much of a strain on your resources, since you'll only be transporting a single individual. We'll make the necessary arrangements on our end.\n\nI just broke the news to Chabky, and she is spinning with joy! In fact, she is spinning out of control now... you'll have to excuse me, [Root.GetSpeciesName] friends..."
  anomaly.5010.desc:0 "A single cargo tug hauling a gas canister has arrived at Baldarak under escort by the [Root.GetName]. The contents of the canister have been released into the gas giant's atmosphere, safely returning the Dathnak colonist to her home."
- anomaly.5010.a:0 "Good riddance."
+ anomaly.5010.a:0 "โชคดีนะ"
  anomaly.5011.name:0 "Lost Contact"
  anomaly.5011.desc:0 "We bring alarming news, [Root.Owner.GetSpeciesName] friends!\n\nContact with our colony on New Baldarak has been lost! They no longer respond to any of our satellite transmissions, and we fear the worst. Perhaps the aliens who bombarded our original homeworld have returned to finish the job. Please send a ship to investigate!"
  anomaly.5011.a:0 "We shall dispatch a ship at once."
@@ -843,7 +843,7 @@
  henrik.16.a:0 "Neat!"
  henrik.20.name:0 "Hostile Armies Spawned"
  henrik.20.desc:0 "Some hostile armies will appear on [Root.GetName]."
- henrik.20.a:0 "To arms!"
+ henrik.20.a:0 "เตรียมอาวุธ!"
  henrik.21.name:0 "Victory!"
  henrik.21.desc:0 "We have prevailed against the evil forces of the [From.GetName]!"
  henrik.22.name:0 "Defeat!"
@@ -950,39 +950,39 @@
  colony.51.a:0 "Open a channel."
  colony.52.desc:1 "Our efforts to destroy the [Root.Owner.GetSubMantleLower]. aliens on [Root.GetName] have met with success! We managed to collapse several of their tunnels on top of their workers, and the caverns that housed their cities have been flooded with nerve gas.\n\nCasualty projections are close to 100%, and our security forces are confident they will be able to deal with any surviving stragglers."
  colony.52.a:0 "Compliments to all service branches involved."
- colony.53.name:2 "[Root.Owner.GetSubMantleUpper] Aliens"
+ colony.53.name:2 "เอเลี่ยน[Root.Owner.GetSubMantleUpper]"
  colony.53.desc:0 "Is this thing on? Can you see us, surfacers? We understand you hail from the Great Nothing that lies upwards, beyond the stone. It was assumed nothing living could exist there, but evidently this is not so. What are your intentions?"
- colony.53.a:0 "Tell us about yourselves."
+ colony.53.a:0 "บอกเราเกี่ยวกับตัวคุณ"
  colony.53.desc.subterranean:0 "Is this thing on? Can you see us, crust-huggers? We understand you hail from the Great Nothing that lies even further upwards, beyond the magma and stone. It was assumed nothing living could exist there, but evidently this is not so. What are your intentions?"
  colony.53.a.response:0 "Our empire stretches across every pocket of the known world. Only the Great Nothing lies beyond our reach. We have many fine cities, supported by lichen farms and the fish we catch in large rivers flowing through our tunnels.\n\nThis has been our way for thousands of years. Our diggers heard the faint echoes of your cities through the stone, and we decided to investigate."
- colony.53.b:0 "We would like to coexist in peace."
+ colony.53.b:0 "เราอยากจะอยู่ร่วมกันอย่างสันติ"
  colony.53.b.response:0 "Then so we shall, surfacer! Let us share this world together in the spirit of peace. We would be most interested in trading with your people. I believe we have much to offer one another. We shall return to our cities and make the arrangements."
  colony.53.b.response.subterranean:0 "Then so we shall, 'crustie'! Let us share this world together in the spirit of peace. We would be most interested in trading with your people. I believe we have much to offer one another. We shall return to our cities and make the arrangements."
- colony.53.c:0 "Submit or be destroyed."
+ colony.53.c:0 "ยอมจำนนหรือถูกทำลาย"
  colony.53.c.response:0 "Ha! It is you who will submit to us! We could have lived side by side in peace, but now our armies will claim the Great Nothing and annex it to our empire. It has always been our destiny to rule all of creation."
- colony.54.name:1 "[Root.Owner.GetSubMantleUpper] Invasion!"
- colony.54.desc:0 "The subterranean aliens on [Root.GetName] have emerged on the surface! Large armies equipped with primitive yet lethal projectile weapons are spilling from the tunnels, and their vanguard has already begun an assault on our settlements.\n\nOur security forces are responding, but we may need to send reinforcements!"
- colony.54.desc.subterranean:0 "The magma-dwelling aliens on [Root.GetName] have emerged into our caverns! Large armies equipped with primitive yet lethal projectile weapons are spilling from the tunnels, and their vanguard has already begun an assault on our settlements.\n\nOur security forces are responding, but we may need to send reinforcements!"
- colony.54.a:0 "To arms!"
- subterranean_invasion:0 "Hostile armies are attacking our colony on [Root.GetName]!"
+ colony.54.name:1 "[Root.Owner.GetSubMantleUpper] บุก!"
+ colony.54.desc:0 "เอเลี่ยนใต้ดินที่ดาว [Root.GetName] ได้ขึ้นมาบนพื้นผิวแล้ว! กองทัพขนาดใหญ่ที่ติดตั้งอาวุธกระสุนปืนแบบดั้งเดิมแต่อันตรายกำลังทะลักออกจากอุโมงค์และแนวหน้าของพวกเขาได้เริ่มโจมตีชุมชนของเราแล้ว\n\nกองกำลังรักษาความปลอดภัยของเรากำลังตอบโต้ แต่เราอาจจำเป็นต้องส่งกำลังเสริม!"
+ colony.54.desc.subterranean:0 "เอเลี่ยนที่อาศัยอยู่ใต้ดินบนดาว [Root.GetName] ได้โผล่เข้ามาในถ้ำของเราแล้ว! กองทัพขนาดใหญ่ที่ติดตั้งอาวุธกระสุนปืนแบบดั้งเดิมแต่อันตรายกำลังทะลักออกจากอุโมงค์และแนวหน้าของพวกเขาได้เริ่มโจมตีชุมชนของเราแล้ว\n\nกองกำลังรักษาความปลอดภัยของเรากำลังตอบโต้ แต่เราอาจจำเป็นต้องส่งกำลังเสริม!"
+ colony.54.a:0 "เตรียมอาวุธ!"
+ subterranean_invasion:0 "กองทัพศัตรูกำลังโจมตีอาณานิคมของเราบนดาว [Root.GetName]!"
  colony.55.desc:0 "The earthquakes that were plaguing [From.From.GetName] were caused by the tunneling efforts of a previously unknown subterranean civilization, native to the [From.From.GetPlanetMoon]! They have breached the surface, and large armies equipped with primitive yet lethal projectile weapons are spilling from the tunnels. Their vanguard has already begun an assault on our settlements. Our security forces are responding, but we may need reinforcements!"
  colony.56.name:0 "Victory on [From.From.GetName]!"
  colony.56.desc:0 "Our forces have managed to drive the subterranean aliens on [From.From.GetName] back into their underground lairs, and they are contained for the moment. This is a temporary solution, however, and it is only a matter of time before they break out onto the surface again.\n\nWe need to strike at them below ground, and our strategists have devised a new attack plan. It has been added to the Situation Log."
  colony.56.desc.subterranean:0 "Our forces have managed to drive the mantle-dwelling aliens on [From.From.GetName] back into their magma lairs, and they are contained for the moment. This is a temporary solution, however - it is only a matter of time before they break out into our caverns again.\n\nWe need to strike at them below ground, and our strategists have devised a new attack plan. It has been added to the Situation Log."
  colony.56.a:0 "We need to solve this problem for good."
- colony.57.name:0 "Defeat on [From.From.GetName]!"
+ colony.57.name:0 "ความพ่ายแพ้ที่ [From.From.GetName]!"
  colony.57.desc:1 "Our forces have been decimated on [From.From.GetName], and the [Root.Owner.GetSubMantleLower] aliens have taken full control over all of our settlements! They are using one of our own satellites to send a message to us."
  colony.58.desc:0 "Surface creatures! Our glorious armies have bested you in battle, and the spoils of your cities are now ours to do with as we please. We have learned much from your machines, and our weapons are now more powerful than ever.\n\nDo not approach this world again!"
  colony.58.desc.subterranean:0 "Crust-hugging creatures! Our glorious armies have bested you in battle, and the spoils of your cities are now ours to do with as we please. We have learned much from your machines, and our weapons are now more powerful than ever.\n\nDo not approach this world again!"
- colony.58.a:0 "The nerve."
- colony.59.name:0 "Aliens Surface"
- colony.59.desc:0 "The subterranean aliens on [From.From.GetName] have emerged on the surface! Their excursion appears limited to small bands of explorers and traders. They may be willing to co-exist peacefully with our colonists, and perhaps even engage in trade. We have been contacted by one of their representatives."
- colony.59.desc.subterranean:0 "The magma-dwelling aliens on [From.From.GetName] have emerged into our caverns! Their excursion appears limited to small bands of explorers and traders. They may be willing to co-exist peacefully with our colonists, and perhaps even engage in trade. We have been contacted by one of their representatives."
- colony.59.a:0 "Let us see what they have to say."
+ colony.58.a:0 "เตรียมพร้อมสำหรับ..."
+ colony.59.name:0 "เอเลี่ยนใต้ผิวดาว"
+ colony.59.desc:0 "เอเลี่ยนใต้ดินที่ดาว [From.From.GetName] ปรากฏตัวขึ้นแล้ว! การเดินทางของพวกเขาดูเหมือนจะจำกัดอยู่เพียงกลุ่มนักสำรวจและพ่อค้ากลุ่มเล็กๆ เท่านั้น พวกเขาอาจเต็มใจที่จะอยู่ร่วมกันกับชาวอาณานิคมของเราอย่างสันติ อาจถึงขั้นมีส่วนร่วมในการค้าขายด้วยซ้ำและเราได้รับการติดต่อจากตัวแทนคนหนึ่งของพวกเขา"
+ colony.59.desc.subterranean:0 "เอเลี่ยนที่อาศัยอยู่ใต้ดินบนดาว [From.From.GetName] ได้โผล่เข้ามาในถ้ำของเราแล้ว! การเดินทางของพวกเขาดูเหมือนจะจำกัดอยู่เพียงกลุ่มนักสำรวจและพ่อค้ากลุ่มเล็กๆ เท่านั้น พวกเขาอาจเต็มใจที่จะอยู่ร่วมกันกับชาวอาณานิคมของเราอย่างสันติ อาจถึงขั้นมีส่วนร่วมในการค้าขายด้วยซ้ำและเราได้รับการติดต่อจากตัวแทนคนหนึ่งของพวกเขา"
+ colony.59.a:0 "เรามาดูกันว่า พวกเขาจะพูดอะไร"
  colony.60.desc:0 "The subterranean aliens on [Root.GetName] have marshaled enough forces in their underground empire to launch another invasion of the surface! Once again their frenzied armies are pouring out of freshly dug tunnels to challenge us."
  colony.60.desc.subterranean:0 "The magma-dwelling aliens on [Root.GetName] have marshaled enough forces in their empire to launch another invasion of our caverns! Once again their frenzied armies are pouring out of freshly dug tunnels to challenge us."
  colony.60.a:0 "We need to drive them back!"
- subterranean_invasion_2:0 "Hostile armies are attacking our colony on [Root.GetName]!"
+ subterranean_invasion_2:0 "กองทัพศัตรูกำลังโจมตีอาณานิคมของเราบนดาว [Root.GetName]!"
  colony.61.name:0 "Collapse"
  colony.61.desc:1 "Grave news from [Root.GetName]! The [Root.Owner.GetSubMantleLower] aliens we have been fighting there somehow managed to collapse the ground under an entire army that was stationed near one of their tunnel entrances.\n\nThe few soldiers that survived the fall were quickly butchered by the aliens before they could be reached by the rest of our forces."
  colony.61.a:0 "They will pay for this!"
@@ -1010,8 +1010,8 @@
  colony.69.desc:1 "We have been approached by a delegation from the [Root.Owner.GetSubMantleLower] aliens on [Root.GetName]. It seems their empire has fallen on hard times recently, and they are facing the threat of a famine. They are pleading with us to provide whatever assistance we can."
  colony.69.a:0 "Of course. We will help however we can."
  colony.69.b:0 "They'll have to fend for themselves."
- subterraneans_pleased:1 "Relations with the [Root.Owner.GetSubMantleLower] civilization will be improved."
- subterraneans_displeased:1 "Relations with the [Root.Owner.GetSubMantleLower] civilization will be harmed."
+ subterraneans_pleased:1 "ความสัมพันธ์กับอารยธรรม[Root.Owner.GetSubMantleLower]จะดีขึ้น"
+ subterraneans_displeased:1 "ความสัมพันธ์กับอารยธรรม[Root.Owner.GetSubMantleLower]จะลดลง"
  colony.70.name:0 "Gift"
  colony.70.desc:0 "As a gift to celebrate the friendship between our two civilizations, a caravan from the subterranean aliens on [Root.GetName] has brought a large quantity of gemstones to the surface. Stones such as these are apparently mined by their empire deep underground, as close to the [Root.GetPlanetMoon]'s core as they dare to venture."
  colony.70.desc.subterranean:0 "As a gift to celebrate the friendship between our two civilizations, a caravan from the magma-dwellers on [Root.GetName] has brought a large quantity of gemstones to our caverns. Stones such as these are apparently mined deep underground, as close to the [Root.GetPlanetMoon]'s core as their civilization dares to venture."
@@ -1026,10 +1026,10 @@
  colony.73.desc:1 "There has been a wave of earthquakes on [Root.GetName] recently, and buildings in several of our settlements have collapsed with many fatalities as a result. The [Root.Owner.GetSubMantleLower] alien empire is excavating a new cavern deep underground where they plan to build a new city, and this appears to be the source of the earthquakes."
  colony.73.a:0 "Turn the other cheek."
  colony.73.b:0 "We must demand an apology!"
- colony.74.name:0 "Request for Technology"
+ colony.74.name:0 "ขอเทคโนโลยี"
  colony.74.desc:1 "After seeing the advanced weapons that our security forces are equipped with, several generals from the [Root.Owner.GetSubMantleLower] alien empire on [Root.GetName] have come forward requesting that we share some of our military technology.\n\nOur own officers are hesitant to do this, as it would make the aliens more difficult to defeat in battle should it ever come to that. If we refuse the request, however, the aliens are certain to view it as an insult."
- colony.74.a:0 "Arming savages with modern weapons would be a bad idea."
- colony.74.b:0 "They are our friends. Share what we can."
+ colony.74.a:0 "การติดอาวุธให้คนป่าเถื่อนด้วยอาวุธสมัยใหม่ไม่เป็นความคิดที่ดี"
+ colony.74.b:0 "พวกเขาเป็นเพื่อน แบ่งปันสิ่งที่เราทำได้"
  colony.75.name:0 "Message Delivered"
  colony.75.desc:1 "Trade with the [Root.Owner.GetSubMantleLower] aliens on [Root.GetName] has dried up as of late, with their caravans showing up more and more seldom. Today we received a message from a representative of their military. They don't seem very pleased."
  colony.75.a:0 "Let's see it."
@@ -1781,7 +1781,7 @@
  crisis.2002.a:1 "This can't be happening."
  crisis.2004.name:1 "Machines Rise Up"
  crisis.2004.desc:1 "Synthetics and Droids all across the [Root.GetName] are rising up in open revolt, turning on their former masters! We need to stop them before they butcher our citizens!"
- crisis.2004.a:1 "To arms!"
+ crisis.2004.a:1 "เตรียมอาวุธ!"
  crisis.2005.name:0 "Machines Conquer [Root.GetName]"
  crisis.2005.desc:0 "We have lost control of [Root.GetName] to the revolting machines! Communication has been lost with the surface, but it looks like the machines are herding our citizens into slave pens."
  crisis.2005.a:0 "We have to retake this world!"
@@ -2187,11 +2187,11 @@
  henrik.710.desc:0 "One [From.GetSpeciesName]. Several [From.GetSpeciesNamePlural]."
  admiral_trait_gain:0 "Commander Gains Trait"
  admiral_trait_loss:0 "Commander Loses Trait"
- leader.1.name:0 "Promising Officer"
+ leader.1.name:0 "เจ้าหน้าที่มีอนาคต"
  leader.1.desc:0 "Captain [officer.GetName], the commanding officer of the [ship.GetName], served with distinction during the recent engagement that took place in the [system.GetName] system. The Admiralty on [Root.Capital.GetName], recognizing the qualities of a promising flag officer, has decided to promote the Captain to the rank of full commander."
  leader.1.desc.machine:0 "[officer.GetName] has been moved up the chain of command as a result of its successful handling of increased processing load during the [ship.GetName]'s battle in the [system.GetName] system."
  leader.1.desc.hive:0 "[officer.GetName] was elevated to Autonomous status following observations of their heightened responses during the [ship.GetName]'s recent engagement in the [system.GetName] system."
- new_admiral:0 "A new commander has been added to the leader pool."
+ new_admiral:0 "เพิ่มผู้บัญชาการคนใหม่ในกลุ่มผู้นำที่สามารถเลือกได้"
  leader.newadmiraltrait.desc.machine:0 "[officer.GetName] has developed a new tactical data set from the feature vectors of the recent combat instance in the [system.GetName] system."
  leader.lostadmiraltrait.desc.machine:0 "Following the recent combat instance in the [system.GetName] system, [officer.GetName] has revised its engagement protocols."
  leader.newadmiraltrait.desc.hive:0 "The engagement in the [system.GetName] system has given rise to unique gene expressions in [officer.GetName]."
