--- a/mod/thmod/localisation/english/federations_anniversary_l_english.yml
+++ b/mod/thmod/localisation/english/federations_anniversary_l_english.yml
@@ -467,7 +467,7 @@
  galactic_features.371.c:0 "It is done."
  galactic_features.367.a:0 "The galaxy should thank us."
  galactic_features.367.b:0 "An unforgivable crime."
- galactic_features.367.c:0 "Good riddance."
+ galactic_features.367.c:0 "โชคดีนะ"
  galactic_features.385:0 "Tiyanki Hunted in [tiyanki_kill_system.GetName]"
  galactic_features.385.desc:0 "We have successfully hunted down and killed some wild Tiyanki in the §H[tiyanki_kill_system.GetName]§! system. Our fleet has used laser cutters to extract materials and resources from the massive Tiyanki remains."
  galactic_features.385.a:0 "Good kills."
@@ -781,7 +781,7 @@
  federations2.71.desc:0 "As we have left our old federation, plans to construct a monument over [FromFrom.GetName] to celebrate the "unity" of the alliance are no longer relevant to us."
  federations2.72.name:0 "$federations2.70.name$"
  federations2.72.desc:0 "As [FromFrom.GetName] is no longer the center of our federation, the old plans to glorify the planet's rulers have been duly shelved."
- federations2.72.A:0 "Good riddance."
+ federations2.72.A:0 "โชคดีนะ"
  federation_hegemony_monument:0 "Federation Monument"
  federation_hegemony_monument_desc:0 "This spaceborne monument stands witness to the unity, strength and splendor of the interstellar federation that constructed it."
  d_federation_hegemony_monument_1:0 "$federation_hegemony_monument$"
