--- a/mod/thmod/localisation/english/federations_l_english.yml
+++ b/mod/thmod/localisation/english/federations_l_english.yml
@@ -1597,9 +1597,9 @@
  FROM_TECH_VALUE:0 "จากเทคโนโลยี: $VALUE|Y$"
  NUM_ENVOYS_VALUE:0 "จำนวนนักการทูต: $VALUE|Y$"
  FROM_COUNCIL_VALUE:0 "จากการประชุมสภา: $VALUE|Y$"
- MISSING_DIPLOMACY_HEAD: "Missing Minister of State"
+ MISSING_DIPLOMACY_HEAD: "ไม่มีรัฐมนตรีอาวุโสแห่งรัฐ"
  IMPROVE_RELATIONS_VALUE:1 "ปรับปรุงความสัมพันธ์: $VALUE|+=2$ ($INCREASE|2$ ต่อเดือน)"
- HARM_RELATIONS_VALUE:1 "Harm Relations: $VALUE|+=2$ ($DECREASE|2$ per month)"
+ HARM_RELATIONS_VALUE:1 "ทำลายความสัมพันธ์: $VALUE|+=2$ ($DECREASE|2$ ต่อเดือน)"
  RELATION_LEVELS:0 "§Hระดับความสัมพันธ์§!"
  RELATION_LEVEL_VALUE:0 "$LEVEL$ ($LOWER|+0$ ถึง $UPPER|+0$)"
  RELATIONS_DESC:0 "The diplomatic relations between your two empires can be split into different levels. Each level can affect which diplomatic deals can be signed between your two nations."
@@ -2773,7 +2773,7 @@
  FEDERATION_VOTE_TYPE_RECENTLY_PROPOSED:0 "$FEDERATION|Y$ has already voted on changing to $TYPE|Y$ recently"
  FEDERATION_ALREADY_HAS_LAW:0 "$FEDERATION|Y$ already has the law $LAW|Y$"
  FEDERATION_ALREADY_HAS_TYPE:0 "$FEDERATION|Y$ เป็น $TYPE|Y$ ($FEDERATION_TYPE$) อยู่แล้ว"
- ACTION_OFFER_FEDERATION_ASSOCIATION_OFFER_DESC:1 "§H[Actor.GetName]§! has invited us to become an associate member of the §H[Actor.GetAllianceName]§!. This will act as a non-aggression pact with all members of the federation."
+ ACTION_OFFER_FEDERATION_ASSOCIATION_OFFER_DESC:1 "§H[Actor.GetName]§! ได้เชิญเราให้เป็นสมาชิกสมทบของ §H[Actor.GetAllianceName]§! และสิ่งนี้จะทำหน้าที่เป็นข้อตกลงไม่รุกรานกับสมาชิกทั้งหมดในสหพันธ์"
  mod_federation_influence_produces_mult:0 "ได้รับอิทธิพลจากสหพันธ์"
  mod_federation_influence_produces_add:0 "$mod_federation_influence_produces_mult$"
  BUILD_PLAN:0 "Build Plan"
