--- a/mod/thmod/localisation/english/l_english.yml
+++ b/mod/thmod/localisation/english/l_english.yml
@@ -1946,7 +1946,7 @@
  TRADE_ITEM_WORMHOLE_STATION_ACCESS_DESC:0 "Allows the other party to build wormhole stations within your borders."
  TRADE_ITEM_WORMHOLE_STATION_ACCESS_CLOSED_BORDERS:0 "Cannot trade due to closed borders"
  TRADE_ITEM_WORMHOLE_STATION_ACCESS_WE_SUBJECT:0 "Cannot trade as $COUNTRY$ is a $SUBJECT$ and cannot trade their access."
- TRADE_ITEM_LOYALTY:0 "Loyalty Change: $AMOUNT|Y$"
+ TRADE_ITEM_LOYALTY:0 "ความภักดีเปลี่ยนแปลง: $AMOUNT|Y$"
  TRADE_ITEM_LOYALTY_DESC:0 "Increases or decreases the Loyalty of the Subject by the specified amount."
  SUPPORT_INDEPENDENCE_ALREADY_SUPPORTING:0 "Already supporting"
  TRADE_NOT_OWNER_OF_SYSTEM:0 "$COUNTRY$ cannot trade away the $SYSTEM$ system"
@@ -2216,7 +2216,7 @@
  SHIP_RANK:0 "ยศ: $RANK|Y$"
  SHIP_EXPERIENCE_FOR_NEXT_RANK:0 "ประสบการณ์สำหรับยศต่อไป: $EXP|0Y$/$NEXT|0Y$"
  SHIP_AT_MAX_RANK:0 "ยานอยู่ที่ระดับยศสูงสุด"
- SHIP_RANK_DESC:0 "§EShip Rank is determined by the level of combat experience the crew has. Higher Rank ships are more effective in combat.§!"
+ SHIP_RANK_DESC:0 "§Eยศของยานจะพิจารณาจากระดับเลเวลประสบการณ์การรบที่ลูกเรือมี ยานยศสูงกว่าจะมีประสิทธิภาพในการรบมากกว่า§!"
  army_rank_regular:0 "ปกติ"
  army_rank_experienced:0 "มีประสบการณ์"
  army_rank_veteran:0 "ผ่านศึก"
@@ -3488,7 +3488,7 @@
  MESSAGE_TARGET_ANOMALY:1 "§Gคลิกเพื่อเปิดหน้าต่างความผิดปกติ§!"
  MESSAGE_TARGET_FLEET:2 "§Gคลิกเพื่อเลือกกองยาน $FLEET|Y$§!"
  MESSAGE_TARGET_ASTRAL_RIFT: "§GClick to select $RIFT|Y$§!"
- MESSAGE_LOST_TARGET_FLEET:1 "§R'$FLEET|Y$' left our Sensor Range§!"
+ MESSAGE_LOST_TARGET_FLEET:1 "§R'$FLEET|Y$' ออกจากระยะเซ็นเซอร์ของเราแล้ว§!"
  MESSAGE_RIGHTCLICK:1 "§Gคลิกขวาเพื่อปิด§!"
  MESSAGE_TARGET_WAR:0 "§Gคลิกเพื่อดูภาพรวมของ $WAR|H$§!"
  ORDERS:0 "คำสั่ง"
@@ -3654,7 +3654,7 @@
  FLEETORDER_GO_MIA_DESC:0 "Fleet(s) couldn't find a path home. Should they do an Emergency FTL Jump and go Missing In Action?"
  FLEETORDER_FOLLOW_FRIENDLIES_TITLE:0 "จุดนำกองยาน"
  FLEETORDER_FOLLOW_FRIENDLIES_DESC:0 "§Gกองยานนี้สามารถเข้าจุดนำและกองยานพันธมิตรจะพยายามติดตาม§!"
- FLEETORDER_FOLLOW_FRIENDLIES_ON:0 "Currently set to §Yencourage§! allied fleets to follow."
+ FLEETORDER_FOLLOW_FRIENDLIES_ON:0 "ปัจจุบันกำหนดให้ §Yสนับสนุน§! กองยานพันธมิตรให้ตาม "
  FLEETORDER_FOLLOW_FRIENDLIES_OFF:0 "ขณะนี้ถูกตั้งค่าให้ §Yป้องกัน§! กองยานพันธมิตรไม่ให้ติดตาม"
  FLEETORDER_BUILD_MEGASTRUCTURE:1 "กำลังสร้าง $MEGASTRUCTURE|H$ ใน $SYSTEM|H$: $PROGRESS|Y%0$"
  IN_COMBAT:0 "In Combat"
@@ -4024,7 +4024,7 @@
  leader_trait_environmental_engineer_desc:2 "This leader has expertise in cutting edge geo-sculpting processes and cost-saving techniques."
  leader_trait_bureaucrat:1 "ผู้รวมให้เป็นหนึ่งเดียว"
  leader_trait_bureaucrat_desc:2 "This leader excels at inter-government diplomacy and consensus building."
- leader_trait_bureaucrat_tt: "§E$PLANET_EFFECTS_TXT$ ต่อเลเวลสกิล:§!$TABBED_NEW_LINE$$mod_planet_jobs_unity_produces_mult$: §G+5%§!"
+ leader_trait_bureaucrat_tt: "§E$PLANET_EFFECTS_TXT$ ทุกๆเลเวลสกิล:§!$TABBED_NEW_LINE$$mod_planet_jobs_unity_produces_mult$: §G+5%§!"
  leader_trait_meticulous:1 "ชอบความสมบูรณ์แบบ"
  leader_trait_meticulous_desc:1 "This leader is thorough in their examinations of unknown phenomena."
  leader_trait_spark_of_genius:0 "ประกายแห่งความอัจฉริยะ"
@@ -5729,7 +5729,7 @@
  CLEAR_DESIGN_TIP:0 "§Hเคลียร์การออกแบบ§!\n§Tเคลียร์ทุกช่องชิ้นส่วน§!"
  SECTION_INSTANCE_ENTRY_TIP:0 "$NAME|H$\n§Gคลิกเพื่อเปลี่ยนส่วนของยาน§!"
  SECTION_INSTANCE_ENTRY_TIP_TITLE:0 "$NAME|H$"
- SECTION_INSTANCE_ENTRY_TIP_FINISH:0 "§GClick to change Section§!"
+ SECTION_INSTANCE_ENTRY_TIP_FINISH:0 "§Gคลิกเพื่อเปลี่ยนเซ็กชัน§!"
  TOOLTIP_REQUIRED_COMP_SLOT_INSTANT:0 "$INSTANT$\n§Gคลิกเพื่อเปลี่ยนส่วนประกอบ§!"
  TOOLTIP_REQUIRED_COMP_SLOT_DELAYED:0 "$DELAYED$"
  SHIP_DESIGN_AUTO_GENERATE:0 "ออกแบบอัตโนมัติ"
@@ -5930,14 +5930,14 @@
  APPLY_GENE_MODIFICATION:0 "ปรับใช้การดัดแปลงพันธุกรรม"
  APPLY_ROBO_MODIFICATION:0 "ปรับใช้การดัดแปลงหุ่นยนต์"
  SPECIES_MODIFICATION_SELECTED_TEMPLATE:0 "เทมเพลตที่เลือก:"
- SPECIES_MODIFICATION_CLICK_TO_SELECT_ALL:0 "§GClick to select all Pops on all Planets.§!"
+ SPECIES_MODIFICATION_CLICK_TO_SELECT_ALL:0 "§Gคลิกเพื่อเลือกประชากรทั้งหมดบนดาวเคราะห์ทั้งหมด§!"
  SPECIES_MODIFICATION_CLICK_TO_SELECT_ALL_DISABLED:0 "§RThe current template cannot be applied to any available species.§!"
- SPECIES_MODIFICATION_CLICK_TO_SELECT_ALL_OF_SPECIES:0 "§GClick to select all Pops of this Species on all Planets.§!"
- SPECIES_MODIFICATION_CLICK_TO_SELECT:0 "§GClick to select all Pops of this Species on this Planet.§!"
+ SPECIES_MODIFICATION_CLICK_TO_SELECT_ALL_OF_SPECIES:0 "§Gคลิกเพื่อเลือกประชากรทั้งหมดของเผ่าพันธุ์นี้บนดาวเคราะห์ทั้งหมด§!"
+ SPECIES_MODIFICATION_CLICK_TO_SELECT:0 "§Gคลิกเพื่อเลือกประชากรทั้งหมดของเผ่าพันธุ์นี้บนดาวเคราะห์ดวงนี้§!"
  SPECIES_MODIFICATION_CLICK_TO_SELECT_DISABLED:1 "§RCannot apply the selected template.§!"
  SPECIES_MODIFICATION_CLICK_TO_SELECT_DISABLED_ADD:0 "§RThe following traits cannot be added:§!\n$TRAITS$"
  SPECIES_MODIFICATION_CLICK_TO_SELECT_DISABLED_REMOVE:0 "§RThe following traits cannot be removed:§!\n$TRAITS$"
- SPECIES_MODIFICATION_SHIFT_CLICK_TO_SELECT_ALL_ON_PLANET:0 "§GShift-Click to select all Pops on this Planet.§!"
+ SPECIES_MODIFICATION_SHIFT_CLICK_TO_SELECT_ALL_ON_PLANET:0 "§GShift-Click เพื่อเลือกประชากรทั้งหมดบนดาวเคราะห์ดวงนี้§!"
  SPECIES_MODIFICATION_PLANETS_TOOLTIP:0 "จำนวนดาวเคราะห์"
  SPECIES_MODIFICATION_POPS_TOOLTIP:0 "จำนวนของประชากร"
  SPECIES_MOD_NUM_POPS:0 "จำนวนประชากรที่เลือก: $COUNT|Y$"
@@ -7384,10 +7384,10 @@
  ACTION_RECIPIENT_ALREADY_PROPOSED:0 "§ROur Alliance already has a proposition for actions against this Empire.§!"
  ACTION_RECIPIENT_ALREADY_ASSOCIATE:0 "§RThey are already associated with another Federation.§!"
  ACTION_DEMAND_SUBJUGATION_TITLE:0 "ต้องการให้เป็นเมืองขึ้นของเรา"
- ACTION_DEMAND_SUBJUGATION_DESC:0 "Peacefully propose that they become our Subject using a reasonable Agreement."
+ ACTION_DEMAND_SUBJUGATION_DESC:0 "ข้อเสนอสันติภาพว่าพวกเขาจะกลายเป็นบริวารของเราโดยใช้ข้อตกลงที่สมเหตุสมผล"
  ACTION_DEMAND_SUBJUGATION_OFFER_DESC:0 "§H[Actor.GetName]§! has demanded that we become their subject."
  ACTION_ASK_TO_BECOME_SUBJUGATED_TITLE:0 "ขอเป็นบริวารของพวกเขา (เมืองขึ้น)"
- ACTION_ASK_TO_BECOME_SUBJUGATED_DESC:0 "We can submit to them and become their subject. Breaking free again will require a war."
+ ACTION_ASK_TO_BECOME_SUBJUGATED_DESC:0 "เราสามารถยอมจำนนต่อพวกเขาและกลายเป็นบริวารของพวกเขาได้ การเป็นอิสระอีกครั้งจะต้องเกิดสงคราม"
  ACTION_SUBJECT_OVERLORD_IS_SUBJECT:0 "§R $OVERLORD$ เป็นบริวาร§!"
  ACTION_FORM_FEDERATION_TITLE:0 "จัดตั้งสหพันธ์"
  ACTION_FORM_FEDERATION_DESC:1 "ก่อตั้งสหพันธ์กับจักรวรรดินี้และเมื่อก่อตั้งเสร็จแล้ว เราสามารถเชิญจักรวรรดิอื่นเข้าร่วมได้"
@@ -7414,7 +7414,7 @@
  ACTION_DECLARE_WAR_ASSOCIATION_STATUS:0 "§Rเราต้องยุติสถานะการมีส่วนร่วมในสหพันธ์ก่อนจึงจะสามารถประกาศสงครามกับพวกเขาได้§!"
  ACTION_DECLARE_WAR_HAS_DEFENSIVE_PACT:0 "§Rเราต้องยกเลิกสนธิสัญญาป้องกันตนเองก่อนจึงจะสามารถประกาศสงครามกับพวกเขาได้§!"
  ACTION_DECLARE_WAR_HAS_BRANCH_OFFICE_PLANET:1 "We must close our Branch Offices on $PLANET|Y$ before we can declare war on them."
- ACTION_DECLARE_WAR_HAS_SUPPORT_INDEPENDENCE:0 "§RWe must stop supporting their independence before we can declare war on them.§!"
+ ACTION_DECLARE_WAR_HAS_SUPPORT_INDEPENDENCE:0 "§Rเราต้องหยุดสนับสนุนเอกราชของพวกเขาก่อนจึงจะประกาศสงครามกับพวกเขาได้§!"
  ACTION_DECLARE_WAR_HAS_GUARANTEE:0 "§RWe must stop guaranteeing their independence before we can declare war on them.§!"
  ACTION_DECLARE_WAR_FEDERATION_HAS_NON_AGGRESSION_PACT:0 "§RFederation member $COUNTRY|H$ has a non-aggression pledge until $DATE|H$, we can not declare war before the non-aggression pledge has expired.§!"
  ACTION_DECLARE_WAR_ALLIANCE_HAS_NON_AGGRESSION_PACT:0 "§RAlliance member $COUNTRY|H$ has a non-aggression pledge until $DATE|H$, we can not declare war before the non-aggression pledge has expired.§!"
@@ -7488,8 +7488,8 @@
  ACTION_END_FEDERATION_ASSOCIATION_TYPE:0 "ยุติสถานะการมีส่วนร่วม"
  ACTION_END_FEDERATION_ASSOCIATION_TYPE_DESC:0 "เราสามารถยุติสถานะการมีส่วนร่วมกับสหพันธ์ของพวกเขาได้"
  ACTION_OFFER_FEDERATION_ASSOCIATION_STATUS_PROPOSAL_FAILED_ACTOR:0 "Our associate status proposal regarding §H[Third_party.GetName]§! was declined."
- ACTION_OFFER_FEDERATION_ASSOCIATION_STATUS_PROPOSAL_FAILED_ALLIANCE:0 "The associate status proposal from §H[Actor.GetName]§! regarding §H[Third_party.GetName]§! was declined."
- ACTION_OFFER_FEDERATION_ASSOCIATION_STATUS_PROPOSAL_FAILED_RECIPIENT:1 "The associate status proposal from §H[Actor.GetName]§! regarding §H[Third_party.GetName]§! timed out and was auto-declined."
+ ACTION_OFFER_FEDERATION_ASSOCIATION_STATUS_PROPOSAL_FAILED_ALLIANCE:0 "ข้อเสนอสถานะผู้มีส่วนร่วมจาก §H[Actor.GetName]§! เกี่ยวกับ §H[Third_party.GetName]§! ถูกปฏิเสธ"
+ ACTION_OFFER_FEDERATION_ASSOCIATION_STATUS_PROPOSAL_FAILED_RECIPIENT:1 "ข้อเสนอสถานะผู้มีส่วนร่วมจาก §H[Actor.GetName]§! เกี่ยวกับ §H[Third_party.GetName]§! หมดเวลาและถูกปฏิเสธโดยอัตโนมัติ"
  ACTION_OFFER_FEDERATION_ASSOCIATION_PROPOSAL_FAILED_RECIPIENT:0 "$ACTION_OFFER_FEDERATION_ASSOCIATION_STATUS_PROPOSAL_FAILED_RECIPIENT$"
  ACTION_OFFER_FEDERATION_ASSOCIATION_PROPOSAL_FAILED_ACTOR:0 "$ACTION_OFFER_FEDERATION_ASSOCIATION_STATUS_PROPOSAL_FAILED_ACTOR$"
  ACTION_REVOKE_FEDERATION_ASSOCIATION_STATUS_PROPOSAL_FAILED_ACTOR:0 "Our revoke associate status proposal regarding §H[Third_party.GetName]§! was declined."
@@ -12182,7 +12182,7 @@
  ASSIGN_REPRESENTATIVE_DELAYED: "§EAssign a Representative to $FEDERATION$ to increase its §!§HCohesion§!"
  FEDERATION_ASSIGNED_LEADERS: "ผู้แทนถูกแต่งตั้งในสหพันธ์: $VALUE|2+=$"
  FEDERATION_COUNTRY_REPRESENTATIVE: "	$COUNTRY$: $EFFECT|Y0$"
- MOD_VERSION:0 "Mod v0.72.0, Update 02/03/2024"
+ MOD_VERSION:0 "Mod v0.72.1, Update 14/03/2024"
  MOD_DEV_MSG:0 "ผู้พัฒนา: §R*ตอนนี้ม็อดยังเป็นเวอร์ชัน Alpha อยู่นะครับ คำศัพท์ยังไม่ค่อยนิ่ง หากมีการเปลี่ยนแปลงคำสำคัญจะแจ้งให้ทราบอีกครั้ง§!\n\n§Bคำที่เปลี่ยนมีดังนี้:\n - n/a \n§!\n\n§Hกรอบการทำงาน เป้าหมาย และ ลำดับความสำคัญ§!\n §E1.DLC ที่รองรับ§! :  Utopia, Synthetic Dawn, Apocalypse, MegaCorp, Federations, Nemesis, Leviathans, Distant Stars, Ancient Relics, Galactic Paragons \n §E2. หลักเกณฑ์การทับศัพท์§! : ราชบัณฑิตยสภา \n §E3. ลำดับความสำคัญในการแปล(เรียงจากมากไปน้อย)§! : (interface/ui) -> (modifier/effect) -> (tutorial) -> (description) -> (event/message)\n\n§Hแหล่งข้อมูลและแรงบันดาลใจ§!\n §E1.หนังสือ:§! เซเปียนส์-ประวัติย่อมนุษยชาติ, โฮโมดีอุส-ประวัติย่อของวันพรุ่งนี้, ยูโทเปีย-มหานครในฝัน, หนึ่ง-เก้า-แปด-สี่ : 1984, หนังสือเรียนวิชาฟิสิกส์, เคมี, ชีว เบื้องต้นสมัยเรียนมหาลัย, วิชาปรัชญาเบื้องต้น, The Matrix and Philosophy: Welcome to the Desert of the Real\n §E2.สารคดี:§! ช่องยูทูป SCIWAYS, GrandMaster TV, คนใฝ่รู้ [Studios], eduHUB, ชีวิตสดใส, คนช่างสงสัย Curiosity Channel, อาจวรงค์ จันทมาศ, Matrix Explained, Kurzgesagt, ZogZag Story, TechOffside, One To Many - A Brief Science\n §E3.บันเทิงคดี:§! The Matrix 1-3 + The Animatrix, Interstellar, 2001: A Space Odyssey, DUNE, Avatar, Star Wars, WALL-E, Star Trek, Inception, Transcendence, Predator, All Tomorrows\n §E4.เอกสาร:§! หลักเกณฑ์การทับศัพท์ภาษาอังกฤษราชบัณฑิตยสภา\n\n§Hเครื่องมือที่ใช้สร้างม็อดมีดังนี้§!\nLocalisation-Manager(Stellaris), Localisation-Editor, MadeeAI Translator"
  MOD_SUPPORTERS:0 "ผู้สนับสนุน: n/a"
  MOD_TEST1DUMMY1:0 "dummy1"
