--- a/mod/thmod/localisation/english/leviathans_l_english.yml
+++ b/mod/thmod/localisation/english/leviathans_l_english.yml
@@ -11,12 +11,12 @@
  station_xl_plural:0 "Ancient Vaults"
  space_amoeba_mother:0 "อะมีบาอวกาศตัวแม่"
  space_amoeba_mother_plural:0 "อะมีบาอวกาศตัวแม่"
- ancient_mining_drone:0 "Ancient Mining Drone"
- ancient_mining_drone_plural:0 "Ancient Mining Drones"
- ancient_corvette:0 "Ancient Combat Drone"
- ancient_corvette_plural:0 "Ancient Combat Drones"
- ancient_destroyer:0 "Ancient Destroyer"
- ancient_destroyer_plural:0 "Ancient Destroyers"
+ ancient_mining_drone:0 "โดรนขุดแร่โบราณ"
+ ancient_mining_drone_plural:0 "โดรนขุดแร่โบราณ"
+ ancient_corvette:0 "โดรนต่อสู้โบราณ"
+ ancient_corvette_plural:0 "โดรนต่อสู้โบราณ"
+ ancient_destroyer:0 "โดรนพิฆาตโบราณ"
+ ancient_destroyer_plural:0 "โดรนพิฆาตโบราณ"
  pirate_cruiser:0 "Pirate Cruiser"
  pirate_cruiser_plural:0 "Pirate Cruisers"
  homebase:0 "ฐานประจำการ"
@@ -37,8 +37,8 @@
  wraith_01_red_plural:0 "Wraiths"
  wraith_frequency_sync:0 "Spectral Frequency Synchronization"
  spectral_residue_studies:0 "Spectral Residue Studies"
- leviathans.5.name:1 "Leviathan Defeated"
- leviathans.5.desc:1 "§Y[leviathan_destroyer_country.GetName]§! has vanquished an ancient threat in the distant [leviathan_destroyed_system.GetName] system."
+ leviathans.5.name:1 "ลิไวธานถูกกำจัด"
+ leviathans.5.desc:1 "§Y[leviathan_destroyer_country.GetName]§! ได้ปราบภัยคุกคามโบราณในระบบดาว [leviathan_destroyed_system.GetName] ที่ห่างไกล"
  leviathans.98.name:0 "เริ่มการติดต่อสื่อสาร"
  leviathans.98.desc:1 "We are receiving a transmission from the independent space station of the §Y[From.GetName]§!! They appear to have successfully translated our language."
  leviathans.98.a:0 "น่าสนใจ"
@@ -105,7 +105,7 @@
  leviathans.105.c.trust:0 "ต้องการ §YTrader Enclave§! ให้มี:\n£opinion£ ทัศนคติ +50\n"
  leviathans.105.d:0 "ไม่มีอะไรในตอนนี้ ลาก่อน"
  leviathans.105.z:1 "เราต้องการว่าจ้าง §Yที่ปรึกษา§!"
- trader_tt_official:1 "Hire a [enclave_country.GetAdj] §Y$official$§!."
+ trader_tt_official:1 "จ้าง §Y$official$§! [enclave_country.GetAdj]"
  leviathans.110.a.reply:0 "Thank you for your business. Please come again!"
  leviathans.110.b.reply:0 "An excellent choice. You will not be disappointed by the quality of our minerals."
  leviathans.110.c.reply:0 "Big spender, eh? Looks like we can close early today!"
@@ -116,7 +116,7 @@
  leviathans.120.c.reply:0 "If only all of our customers traded with us in such bulk! Transferring credits to you now."
  leviathans.125.desc.z1:1 "We have a talented executive standing by, ready to migrate to the [Root.GetName] and get any of your sectors back out of the red. Entrust your §HTrade Value§! to an expert!"
  leviathans.125.desc.z1.gestalt:0 "We have a talented executive standing by, ready to... Hm. Are you sure?\n\n'Buyer beware' is all well and good, but still: I feel obliged to inform you that our consultants really only specialize in §HTrade Value§!. I'm not sure they would be a good fit for you, given your... unusual relationship with that concept."
- leviathans.125.z1:0 "Deal."
+ leviathans.125.z1:0 "ตกลง"
  leviathans.125.z1.gestalt:0 "We understand, and wish to proceed anyway."
  leviathans.126.desc:0 "Excellent! We are happy to share our skills with the [Root.GetName]."
  leviathans.126.desc.alt: "Excellent! May we both profit from each other's... distinct approach to commerce."
