--- a/mod/thmod/localisation/english/marauder_l_english.yml
+++ b/mod/thmod/localisation/english/marauder_l_english.yml
@@ -128,22 +128,22 @@
  marauder.34.1.a:0 "Armada of the Voidborn"
  marauder.34.2.a:0 "234th Dwamak-Bashers"
  marauder.34.3.a:0 "Her Chosen Champions"
- voidborn_hire:0 "\nYou hire this mercenary fleet for a period of 5 years. It consists of:\n\n§Y6 Cruisers\n8 Frigates\n16 Raiders§!"
+ voidborn_hire:0 "\nคุณจ้างกองยานรบเป็นระยะเวลา 5 ปี ประกอบด้วย:\n\n§Yยานลาดตระเวณ 6\nยานฟริเกต 8\nยานไรเดอร์ 16§!"
  marauder.34.1.b:0 "Star Rider Flotilla"
  marauder.34.2.b:0 "Unhinged Screamer Flotilla"
  marauder.34.3.b:0 "Order of Eternal Night"
- star_riders_hire:0 "\nYou hire this mercenary fleet for a period of 5 years. It consists of:\n\n§Y4 Cruisers\n6 Frigates\n12 Raiders§!"
+ star_riders_hire:0 "\nคุณจ้างกองยานรบเป็นระยะเวลา 5 ปี ประกอบด้วย:\n\n§Yยานลาดตระเวณ 4\nยานฟริเกต 6\nยานไรเดอร์ 12§!"
  marauder.34.1.c:0 "First Storm Wing"
  marauder.34.2.c:0 "Frenzied Volunteer Squadron"
  marauder.34.3.c:0 "Twilight Congregation"
- storm_wing_hire:0 "\nYou hire this mercenary fleet for a period of 5 years. It consists of:\n\n§Y2 Cruisers\n4 Frigates\n8 Raiders§!"
+ storm_wing_hire:0 "\nคุณจ้างกองยานรบเป็นระยะเวลา 5 ปี ประกอบด้วย:\n\n§Yยานลาดตระเวณ 2\nยานฟริเกต 4\nยานไรเดอร์ 8§!"
  marauder.34.d:0 "ไม่เป็นไร คุยเรื่องอื่นดีกว่า"
  marauder.34.e:0 "ลาก่อน"
  marauder.37.1.a.desc:0 "Congratulations, [Root.GetSpeciesNamePlural]. With the fleet you have just hired, you could storm the [random_fallen_empire.GetName]!\n\nWell, perhaps not. But make no mistake: it is a powerful force!"
  marauder.37.1.b.desc:0 "The flotilla is yours, [Root.GetSpeciesNamePlural]. Remember: a single [marauder_country_1.GetSpeciesName] is worth at least ten warriors of any other species. You may adjust your force calculations accordingly."
  marauder.37.2.a.desc:0 "You make wise decision, dwamak! By hiring these unstable [marauder_country_2.GetSpeciesNamePlural], you make certain some other dwamak not hire them and send them after you! HYEEEIIIIEEE!!!!"
  marauder.37.3.a.desc:0 "These holy warriors will serve you well, [Root.GetSpeciesNamePlural]. Just... do not trespass on their ships. They are considered sacred, and She of the Void would not look kindly on any unbelievers who tread on their hallowed decks."
- marauder.37.a:0 "There was something else..."
+ marauder.37.a:0 "มีอย่างอื่นอีก..."
  marauder.37.b:0 "ลาก่อน"
  marauder_1_tribute:0 "[marauder_country.GetSpeciesName] Tribute"
  marauder_1_tribute_desc:0 "We have offered tribute to the [marauder_country.GetName]. They have agreed not to attack us for a time."
