--- a/mod/thmod/localisation/english/megacorp_l_english.yml
+++ b/mod/thmod/localisation/english/megacorp_l_english.yml
@@ -898,7 +898,7 @@
  job_colonist:0 "นักล่าอาณานิคม"
  job_colonist_plural:0 "นักล่าอาณานิคม"
  job_colonist_desc:1 "The settling of a new world is no easy undertaking."
- job_colonist_effect_desc:1 "£job_colonist£ $job_colonist_plural$ produce a small amount of $r_food$ (or $r_minerals$) and £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§!, and spawn £defense_army£ §YDefense Armies§!."
+ job_colonist_effect_desc:1 "£job_colonist£ $job_colonist_plural$ ผลิต $r_food$ (หรือ $r_minerals$) และ £mod_planet_amenities_add£ §Y$PLANET_AMENITIES_TITLE$§! เพิ่มขึ้นเล็กน้อย และวางกำลัง £defense_army£ §Yกองทัพป้องกัน§!"
  mod_job_colonist_add:0 "งาน $job_colonist$"
  mod_job_colonist_per_pop:0 "£job_colonist£ §G+1§! อาชีพ $job_colonist$ ต่อ $VALUE$ ประชากร"
  mod_job_colonist_per_pop_short:0 "\n§G+1§! £mod_job_colonist_add£ ต่อ $VALUE$ £pop£"
@@ -2853,10 +2853,10 @@
  crime.552.name:0 "Virus Terminates Deviant Network on [Root.GetName]"
  crime.552.desc:0 "A virus introduced into one of the corrupted drone networks on §H[Root.GetName]§! has successfully terminated its entire data grid. This has significantly reduced the activities of all corrupted drone units on the [Root.GetPlanetMoon]."
  crime.552.a:0 "The directives of the core intelligence will be upheld."
- crime.1001.name:1 "Branch Office shut down on [Root.GetName]"
+ crime.1001.name:1 "สำนักงานสาขา [Root.GetName] ได้ปิดตัวลง"
  crime.1001.desc:0 "As crime levels continue to drop on §H[Root.GetName]§!, the local authorities have been able to focus their efforts on thwarting the illegal enterprises operated by the §H[office_owner.GetName]§! on the [Root.GetPlanetMoon]. A large number of arrests have been made, forcing their criminal branch office out of business."
- crime.1001.a:0 "Good riddance."
- crime.1002.name:1 "Branch Office shut down on [From.GetName]"
+ crime.1001.a:0 "โชคดีนะ"
+ crime.1002.name:1 "สำนักงานสาขา [From.GetName] ได้ปิดตัวลง"
  crime.1002.desc:0 "Our branch office on §H[From.GetName]§! inside the §H[From.Owner.GetName]§! was recently forced to close after mass arrests made by the local authorities. It seems that the recent reduction in crime on the [From.GetPlanetMoon] enabled their law enforcement agencies to focus their efforts on disrupting our operations."
  crime.1002.tooltip:0 "Our Branch Office on [From.GetName] has been closed."
  atomic_clock_cat:0 "$AST_DEBRIS_FIELD_1_CAT$"
@@ -3267,7 +3267,7 @@
  cara.951.name:0 "Losing the §EGalatron§!"
  cara.951.desc:0 "Aside from numerous functionaries breaking down into hysterics during the handover, the surrendering of the Galatron to [From.GetAdj] forces was an uneventful affair."
  cara.951.a:0 "A wordless wail of anguish."
- cara_fleet1_contact.title:0 "The Vengralian Trium"
+ cara_fleet1_contact.title:0 "Vengralian Trium"
  fleet1contact_opening:0 "Greetings from the Vengralian Trium, certified caravaneer traders of the Caravansary Caravan Coalition!"
  fleet1contact1:0 "$fleet1contact_opening$ We bring you exclusive products from the farthest corners of the galaxy (as reproduced by our shipboard factories) at affordable prices.\n\n$fleet1contact_explanation$"
  fleet1contact2:0 "$fleet1contact_opening$ We teach xenos how to earn a substantial additional income working from home, but you seem to be doing well for yourself already.\n\n$fleet1contact_explanation$"
@@ -3299,7 +3299,7 @@
  cara_fleet1_deals.title:0 "$cara_fleet1_contact.title$"
  fleet1dealdesc1:0 "We offer you [Root.GetFleet1DealProduct]\n\nAll this for the low, low price of [Root.GetFleet1DealCost]\n\n[Root.GetFleet1DealProductAddendum]"
  cara_fleet1_deal:0 "แสดงสินค้าของคุณให้เราดู"
- cara_fleet1_take_deal:0 "Deal."
+ cara_fleet1_take_deal:0 "ตกลง"
  cara_fleet1_take_deal.tooltip:0 "cara_fleet1_deal.tooltip"
  cara_fleet1_dealtaken:0 "Pleasure doing business with you. And remember: don't dream it, be it!"
  cost_500energy:0 "เครดิตพลังงาน: £energy£ §R-500§!"
@@ -3706,7 +3706,7 @@
  planet_devastation:0 "การทำลายล้างของดาวเคราะห์"
  bunkbeds_deployed:0 "§H$cara_fleet1_contact.title$§!: Bunk Beds Deployed"
  bunkbeds_deployed_desc:1 "Efficient Trium-brand stackable sleep enclosures reduce housing needs on this world."
- tupperware_deployed:0 "§H$cara_fleet1_contact.title$§!: Food-Preserving Containers Deployed"
+ tupperware_deployed:0 "§H$cara_fleet1_contact.title$§!: ใช้งานที่บรรจุอาหาร"
  tupperware_deployed_desc:0 "The use of Trium-brand food storage containers reduce food waste on this world."
  atmospheric_deodorizer_deployed:1 "§H$cara_fleet1_contact.title$§!: Atmospheric Deodorizer Deployed"
  atmospheric_deodorizer_deployed_desc:0 "Atmospheric scrubbers lend the air on this planet a quality of minty freshness."
@@ -3856,8 +3856,8 @@
  NAME_Caravaneer_Home:0 "Caravansary Caravan Coalition"
  NAME_Caravaneer_Coalition_Base:0 "Coalition Base"
  NAME_Tradestation_Tungle:0 "Tradestation Tungle"
- NAME_Caravaneer_Fleet1:0 "The Vengralian Trium"
- NAME_Caravaneer_Fleet1_country:0 "The Vengralian Trium"
+ NAME_Caravaneer_Fleet1:0 "Vengralian Trium"
+ NAME_Caravaneer_Fleet1_country:0 "Vengralian Trium"
  NAME_Caravaneer_Fleet1_fleet:0 "Orlan Memorial Caravan"
  NAME_Caravaneer_Fleet1_species:0 "Vengral"
  NAME_Caravaneer_Fleet2:0 "The Numistic Order"
@@ -3884,8 +3884,8 @@
  planet_pops_organics_upkeep_mult:0 "ค่าบำรุงรักษาของ £pop£ ประชากร"
  MESSAGE_NEW_BRANCH_OFFICE_TITLE:0 "สำนักงานสาขาใหม่"
  MESSAGE_NEW_BRANCH_OFFICE:0 "บริษัทขนาดใหญ่ $COUNTRY|Y$ ได้ตั้งสำนักงานสาขาแห่งใหม่บนดาว $PLANET|Y$"
- MESSAGE_CLOSED_BRANCH_OFFICE_TITLE:0 "Branch Office Closed"
- MESSAGE_CLOSED_BRANCH_OFFICE:0 "The $COUNTRY|Y$ Megacorporation has closed down their Branch Office on $PLANET|Y$."
+ MESSAGE_CLOSED_BRANCH_OFFICE_TITLE:0 "สำนักงานสาขาถูกปิด"
+ MESSAGE_CLOSED_BRANCH_OFFICE:0 "บริษัท $COUNTRY|Y$ ได้ปิดสำนักงานสาขาของตนบนดาว $PLANET|Y$"
  MESSAGE_LOST_MARKET_STATION_TITLE:0 "Market Station Lost"
  MESSAGE_LOST_MARKET_STATION:0 "We have lost control of the §HGalactic Market Station§! in the §Y$SYSTEM$§! system!"
  MESSAGE_GALPULSE:0 "The §EGalatron§! Pulses"
