--- a/mod/thmod/localisation/english/modifiers_l_english.yml
+++ b/mod/thmod/localisation/english/modifiers_l_english.yml
@@ -418,7 +418,7 @@
  MOD_PLANET_ARMY_BUILD_COST_MULT:0 "ค่าใช้จ่ายกองทหาร"
  MOD_PLANET_ARMY_BUILD_COST_MULT_DESC:0 "Affects the resources required to equip armies within the Empire, increasing or reducing the cost of recruitment."
  MOD_PLANET_BORDER_MULT:0 "Planet Border Extrusion"
- MOD_COUNTRY_BORDER_FRICTION_MULT:0 "ความขัดแย้งขอบชายแดน"
+ MOD_COUNTRY_BORDER_FRICTION_MULT:0 "ความขัดแย้งชายแดน"
  MOD_PLANET_BUILDING_BUILD_SPEED_MULT:1 "ความเร็วในการก่อสร้างบนดาวเคราะห์"
  MOD_PLANETARY_ASCENSION_EFFECT_MULT:0 "เอฟเฟกต์การยกระดับของดาวเคราะห์"
  MOD_PLANETARY_ASCENSION_COST_MULT:0 "ค่าใช้จ่ายในการยกระดับของดาวเคราะห์"
@@ -1163,7 +1163,7 @@
  opinion_relative_power:1 "พลังอำนาจโดยรวมของบริวาร"
  opinion_claims_on_us:2 "This Empire's Claims"
  opinion_their_claims:2 "Opposing Empire's Claims"
- opinion_friction:0 "ความขัดแย้งขอบชายแดน"
+ opinion_friction:0 "ความขัดแย้งชายแดน"
  opinion_rivalry:0 "คู่แข่งของเรา"
  opinion_declared_rival:0 "คู่แข่งเรา"
  opinion_mutual_threat:0 "มีภัยคุกคามร่วมกัน"
@@ -1317,9 +1317,9 @@
  damaged_ecology_desc:0 "The destruction of the wandering forests on this world has had a significant effect on the ecology."
  friendly_trees:0 "Forest Adaptation"
  friendly_trees_desc:0 "The forests and colonists on this world have adapted to each other, raising spirits for a time."
- subterranean_civilization:0 "Subterranean Civilization"
+ subterranean_civilization:0 "อารยธรรมใต้ดิน"
  subterranean_civilization_desc:0 "The subterranean alien civilization on this world enjoys a good relationship with the colonists on the surface, and both parties frequently engage in trade and cultural exchanges."
- subterranean_expansion:0 "Subterranean Cities"
+ subterranean_expansion:0 "เมืองใต้ดิน"
  subterranean_expansion_desc:0 "The indigenous subterranean civilization that once lived on this world has been exterminated, and colonists are now free to expand into their abandoned underground cities."
  gas_giant_civ:0 "Dathnak Capital"
  gas_giant_civ_desc:1 "This world is the new capital and adopted homeworld of the Dathnak. These sapient gaseous beings have no industry or technology, but they appear to be quite social."
@@ -1359,7 +1359,7 @@
  noninterference_directive_desc:0 ""
  abundant_geothermal_activity: "Abundant Geothermal Activity"
  abundant_geothermal_activity_desc: "This planet has many accessible geothermal hot spots. While this poses some engineering challenges, it also provides extra energy generation opportunities."
- subterranean_wildlife: "Subterranean Wildlife"
+ subterranean_wildlife: "สัตว์ป่าใต้ดิน"
  subterranean_wildlife_desc: "This planet has a thriving underground lithotrophic ecosystem. Herds of mild mineral-crunching subterranean creatures dig out large caverns, leaving them available for mining and colony use. The animals provide unique research opportunities for the miners who direct the packs to valuable mineral deposits."
  rich_mircoflora: "Rich Microflora"
  rich_mircoflora_desc: "The soil of this world is home to a robust and highly productive microflora ecosystem, allowing for rich farming and research opportunities."
@@ -1485,14 +1485,14 @@
  organic_starship_desc:1 "Some sort of organic starship crashed on this world more than three billion years ago. Though only its ancient bones remain, the site offers a wealth of research opportunities."
  abandoned_cities:0 "Abandoned Cities"
  abandoned_cities_desc:0 "The original inhabitants of this world have mysteriously vanished, leaving behind their cities and infrastructure almost intact. This will make it much easier for a potential colony to develop."
- subterranean_ocean:0 "Subterranean Ocean"
+ subterranean_ocean:0 "มหาสมุทรใต้ดิน"
  subterranean_ocean_desc:1 "There is a large ocean heated by hydrothermal vents hidden beneath the ice mantle of this world. It is teeming with life, and much can be learned by studying these unique organisms."
  colony_enclaves:0 "Fortified Enclaves"
  colony_enclaves_desc:0 "The colony on this world is limited to several fortified enclaves. An indigenous Stone Age proto-civilization has been left in peace to develop independently on the remaining land."
  primitive_reservation:0 "Alien Reservation"
  primitive_reservation_desc:0 "A part of this world has been turned into an enclosed reservation for an indigenous Stone Age proto-civilization. This has somewhat limited the land and resources available to colonists."
  starvation:0 "Starvation"
- subterranean_tech_transaction:0 "Subterranean Tech Provision"
+ subterranean_tech_transaction:0 "เงื่อนไขเทคโนโลยีชาวใต้ดิน"
  subterranean_tech_transation_desc:0 "A portion of our research materials and funds are earmarked for use by the subterranean civilization living inside one of our colonized planets."
  stellarite_high_temp:0 "Increased Temperature"
  stellarite_high_temp_desc:0 "A radiant monstrosity present in this system is increasing the surface temperature of the planet."
