--- a/mod/thmod/localisation/english/overlord_subjects_l_english.yml
+++ b/mod/thmod/localisation/english/overlord_subjects_l_english.yml
@@ -47,7 +47,7 @@
  MONTHLY_LOYALTY_TOOLTIP_TITLE:0 "§Hการเปลี่ยนแปลงความภักดีรายเดือน§!"
  LOYALTY_VALUE_DESC:0 "ความภักดีที่พวกเขามีต่อ $OVERLORD|H$ คือ $LOYALTY|+=0$"
  LOYALTY_VALUE_FOR_PLAYER_DESC:0 "ความภักดีของเราที่มีต่อ $OVERLORD|H$ คือ $LOYALTY|+=0$"
- LOYALTY_DESC:0 "§ELoyalty decides the relationship between the two parties in an§! §HAgreement§!§E: The§! §HOverlord§! §Eand§! §HSubject§!"
+ LOYALTY_DESC:0 "§Eความภักดีคือความสัมพันธ์ระหว่างทั้งสองฝ่ายตาม§! §Hข้อตกลง§!§E:§! §Hเจ้าเหนือหัว§! §Eและ§! §Hบริวาร§!"
  MONTHLY_LOYALTY_VALUE_FOR_PLAYER_DESC:0 "ความภักดีของเราที่มีต่อ $OVERLORD|H$ เปลี่ยนแปลง $VAL|+=1$ (ต่อเดือน)"
  MONTHLY_LOYALTY_VALUE_DESC:0 "ความภักดีพวกเขาต่อ $OVERLORD|H$ เปลี่ยนแปลง $VAL|+=1$ (ต่อเดือน)"
  TERM_EFFECT:0 "§Yผล§!:"
@@ -577,7 +577,7 @@
  corporate_franchise_desc:0 "The branding and market information supplied by the Corporate Overlord is well worth every credit paid."
  overlord_ethics_compatibility:0 "ความเข้ากันได้กับจริยธรรมของเจ้าเหนือหัว"
  overlord_ethics_compatibility_desc:0 "Our Overlord's ethics compared to our own."
- domestic_intelligence:0 "Domestic Intelligence"
+ domestic_intelligence:0 "หน่วยสืบราชการลับในจักรวรรดิ"
  newly_released_sector_loyalty:0 "Recently Released Sector"
  newly_released_sector_loyalty_desc:0 "Our gratitude to our founding Empire is still fresh in our minds."
  newly_subjugated_loyalty:0 "ความต้องการให้เป็นเมืองขึ้น/บริวาร"
@@ -626,8 +626,8 @@
  LOYALTY_RELATIVE_POWER:1 "§Hเปรียบเทียบพลังอำนาจโดยรวม§!: $VAL|+=0$"
  LOYALTY_AGREEMENT_TERMS_HEADER:0 "$TERMS_HEADER$"
  LOYALTY_RESOURCE_CONTRIBUTION_HEADER:0 "$RESOURCE_CONTRIBUTION$"
- LOYALTY_BREAKDOWN_FLAVOR:0 "§ELoyalty decides the relationship between the two parties in an §HAgreement§!: The §HOverlord§! and their §HSubject§!.§!"
- LOYALTY_MONTHLY_EXTRA_INFO:0 "§ROther factors besides Agreement Terms may impact the final result.§!"
+ LOYALTY_BREAKDOWN_FLAVOR:0 "§Eความภักดีคือความสัมพันธ์ระหว่างทั้งสองฝ่ายตาม §Hข้อตกลง§!: §Hเจ้าเหนือหัว§! และ §Hบริวาร§! ของพวกเขา§!"
+ LOYALTY_MONTHLY_EXTRA_INFO:0 "§Rปัจจัยอื่นๆนอกเหนือจากข้อกำหนด อาจส่งผลต่อผลลัพธ์สุดท้าย§!"
  LOYALTY_MONTHLY_BREAKDOWN_FLAVOR:0 "$LOYALTY_BREAKDOWN_FLAVOR$"
  LOYALTY_BREAKDOWN_HEADER_NEW:0 "§Hความภักดีใหม่§!"
  LOYALTY_BREAKDOWN_HEADER_OLD:0 "§Hความภักดีปัจจุบัน§!"
@@ -641,9 +641,9 @@
  LOYALTY_IMPACT_PER_AGREEMENT_TERM:0 "§Hผลกระทบต่อความภักดีจากข้อกำหนดนี้§!"
  MONTHLY_LOYALTY_IMPACT_PER_AGREEMENT_TERM:0 "§Hผลกระทบต่อความภักดีจากข้อกำหนดนี้ (ต่อเดือน)§!"
  LOYALTY_ACCEPTANCE_FACTOR:0 "ความภักดี"
- CURRENT_OVERLORD_RELATIVE_POWER_ACCEPTANCE_FACTOR:0 "Relative Power to Overlord"
+ CURRENT_OVERLORD_RELATIVE_POWER_ACCEPTANCE_FACTOR:0 "เปรียบเทียบพลังอำนาจโดยรวมกับเจ้าเหนือหัว"
  DISLOYALTY_ACCEPTANCE_FACTOR:0 "ไม่ความภักดี"
- LOYAL_ACCEPTANCE_FACTOR:0 "Loyal"
+ LOYAL_ACCEPTANCE_FACTOR:0 "ความภักดี"
  OVERLORD_TITLE_TEXT:0 "เจ้าเหนือหัว"
  SUBJECT_TITLE_TEXT:0 "บริวาร"
  job_overlord_propagandist:0 "นักโฆษณาชวนเชื่อ (โอเวอร์ลอร์ด)"
@@ -826,7 +826,7 @@
  planet_overlord_propagandists:0 "Overlord Propagandists"
  planet_overlord_academics:0 "Overlord Academics"
  planet_overlord_traders:0 "Overlord Traders"
- planet_aid_workers:0 "Aid Workers"
+ planet_aid_workers:0 "เจ้าหน้าที่ช่วยเหลือ"
  planet_mind_thralls:0 "Mind Thralls"
  planet_overlord_offspring_drone_feeder:0 "$job_overlord_offspring_drone_feeder$"
  planet_overlord_beholders:0 "Overlord Beholders"
