--- a/mod/thmod/localisation/english/paragon_2_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_2_l_english.yml
@@ -26,9 +26,9 @@
  DISMISS_LEADER_COST:0 "§Gค่าใช้จ่าย: $COST$§!"
  CAN_NOT_AFFORD_DISMISSING_LEADER:0 "§RCan't afford the cost of $COST$§!"
  RECRUIT_LEADER_AT_CAP_TITLE:0 "ผู้นำเต็มความจุ"
- RECRUIT_LEADER_AT_CAP_DESC:1 "Recruiting this leader will put you over your Leader Cap, adding penalties to upkeep and experience gain for all your leaders.\n\nThis leader will cost $COST|Y$ now and a base of §Y[Root.GetUpkeep]§! per month."
+ RECRUIT_LEADER_AT_CAP_DESC:1 "การสรรหาผู้นำรายนี้จะทำให้ผู้นำของคุณเกินเพดานความจุ เพิ่มโทษค่าบำรุงรักษาและค่าประสบการณ์ที่ได้รับสำหรับผู้นำทุกคนของคุณ\n\nตอนนี้ผู้นำรายนี้จะมีค่าใช้จ่าย $COST|Y$ และพื้นฐาน §Y[Root.GetUpkeep]§! ต่อเดือน"
  RECRUIT_LEADER_ALREADY_OVER_CAP_TITLE:0 "จำนวนผู้นำเกินความจุ"
- RECRUIT_LEADER_ALREADY_OVER_CAP_DESC:1 "You have exceeded your Leader Cap. Recruiting this leader will further increase penalties to your leaders' upkeep and experience gain.\n\nThis leader will cost $COST|Y$ now and a base of §Y[Root.GetUpkeep]§! per month."
+ RECRUIT_LEADER_ALREADY_OVER_CAP_DESC:1 "ผู้นำคุณเกินขีดจำกัดแล้ว การสรรหาผู้นำรายนี้จะเพิ่มโทษค่าบำรุงรักษาและค่าประสบการณ์ที่ได้รับสำหรับผู้นำของคุณ\n\nตอนนี้ผู้นำรายนี้จะมีค่าใช้จ่าย $COST|Y$ และพื้นฐาน §Y[Root.GetUpkeep]§! ต่อเดือน"
  RECRUIT_LEADER_TITLE:0 "แต่งตั้งผู้นำ?"
  RECRUIT_LEADER_DESC:0 "สรรหาผู้นำในจักรวรรดิของคุณ\n\nผู้นำคนนี้มีค่าใช้จ่าย $COST|Y$ และค่าตอบแทน §Y[Root.GetUpkeep]§! ต่อเดือน"
  TOTAL_LEADER_COST:0 "ทั้งหมด: $COST$"
@@ -582,8 +582,8 @@
  YOU_HAVE_NO_OFFICIAL_PLURAL: "You have no Officials"
  YOU_HAVE_NO_LEADERS:0 "You have no Leaders"
  TOOLTIP_ETHICS:0 "§Hจริยธรรมการปกครอง§!"
- PLANET_CONTROLLER_GAINED_VIA_BOMBARDMENT_TITLE:0 "Planet Surrendered"
- PLANET_CONTROLLER_GAINED_VIA_BOMBARDMENT_DESC:0 "We have gained control of $PLANET|H$ via §HOrbital Bombardment§!"
+ PLANET_CONTROLLER_GAINED_VIA_BOMBARDMENT_TITLE:0 "ดาวเคราะห์ยอมแพ้"
+ PLANET_CONTROLLER_GAINED_VIA_BOMBARDMENT_DESC:0 "เราได้ทำการควบคุม $PLANET|H$ โดย §Hการทิ้งระเบิดจากวงโคจร§!"
  ASSIGN_GENERAL_NO_ARMIES:0 "§RMust have armies in order to assign a General§!"
  overseer_from_overlord_present:0 "Overseer is present"
  knowledge_for_the_masses_per_pop_effect:0 "$leader_trait_knowledge_for_the_masses$"
@@ -657,7 +657,7 @@
  LEADER_FACTION_SUPPORT:0 "[Root.GetPopFactionSupport]"
  LEADER_CAP_BASE:1 "ความจุ $CLASS_WITH_ICON$ พื้นฐาน: $VALUE|Y$"
  LEADER_CAP_TOTAL:1 "ความจุ $CLASS_WITH_ICON$ ทั้งหมด: $VALUE|Y$"
- LEADER_COST_FROM_CAP_MULT:1 "Over $CLASS_WITH_ICON$ Cap: $VALUE$"
+ LEADER_COST_FROM_CAP_MULT:1 "$CLASS_WITH_ICON$ เกินเพดานความจุ: $VALUE$"
  LEADER_CAPACITY_SHORT_DESCRIPTION:1 "We can effectively support up to $LEADER_CAP|Y$ $CLASS_PLURAL$. We currently have $LEADER_CAP_USAGE$."
  LEADER_CAPACITY_LONG_DESCRIPTION:1 "§E§Hความจุ$CLASS$§! เกินกำหนดจะทำให้เพิ่มโทษที่รุนแรงมากขึ้นใน §H$UPKEEP$§! และค่า §Hประสบการณ์§! ที่ได้รับ สำหรับ$CLASS_PLURAL$ของคุณทุกคน §Hความจุ$CLASS$§! สามารถเพิ่มได้โดยการปลดล็อก §Hวัฒนธรรม§!, §Hเทคโนโลยี§! หรือโดยการปฏิรูป §Hระบอบการปกครอง§! ของคุณ§!"
  LEADER_CAPACITY_PENALTY_HEADER:1 "§HCurrent Penalties§!"
@@ -766,7 +766,7 @@
  leader_trait_intellectual_2_desc:0 "$leader_trait_intellectual_desc$"
  leader_trait_bureaucrat_2:0 "$leader_trait_bureaucrat$ II"
  leader_trait_bureaucrat_2_desc:0 "$leader_trait_bureaucrat_desc$"
- leader_trait_bureaucrat_2_tt: "$leader_trait_bureaucrat_tt$\n\n§E§Y£sector£ Sector§! Effects per Skill Level:§!$TABBED_NEW_LINE$$mod_planet_jobs_unity_produces_mult$: §G+2.5%§!"
+ leader_trait_bureaucrat_2_tt: "$leader_trait_bureaucrat_tt$\n\n§Eมีผลต่อ §Y£sector£ เซ็กเตอร์§! ทุกๆเลเวลสกิล:§!$TABBED_NEW_LINE$$mod_planet_jobs_unity_produces_mult$: §G+2.5%§!"
  leader_trait_courtroom_training:0 "ผู้ที่ศึกษาภาษามนุษย์ต่างดาว"
  leader_trait_courtroom_training_desc:1 "A natural ability in Xenolinguistics has allowed this leader to be able to expertly communicate when interacting with aliens."
  leader_trait_principled:0 "มีหลักการ"
@@ -1050,7 +1050,7 @@
  leader_trait_skirmisher_2_desc:0 "$leader_trait_skirmisher_desc$"
  leader_trait_fleet_organizer_2:0 "$leader_trait_fleet_organizer$ II"
  leader_trait_fleet_organizer_2_desc:0 "$leader_trait_fleet_organizer_desc$"
- leader_trait_intimidator:0 "Intimidator"
+ leader_trait_intimidator:0 "นักข่มขู่"
  leader_trait_intimidator_desc:1 "This leader possesses a grim presence, easily intimidating fearful enemies."
  leader_trait_micromanager:0 "Micromanager"
  leader_trait_micromanager_desc:1 "This leader can only control a limited fleet, as they demand to oversee every detail of its operation."
@@ -1096,7 +1096,7 @@
  leader_trait_dreaded_desc:1 "This leader fills their enemies with dread."
  leader_trait_dreaded_2:0 "$leader_trait_dreaded$ II"
  leader_trait_dreaded_2_desc:0 "$leader_trait_dreaded_desc$"
- leader_trait_hardy:1 "Hardiness"
+ leader_trait_hardy:1 "ความแข็งแกร่ง"
  leader_trait_hardy_desc:1 "This leader conducts quality training exercises to ensure their troops are always in prime physical condition."
  leader_trait_hardy_2:0 "$leader_trait_hardy$ II"
  leader_trait_hardy_2_desc:0 "$leader_trait_hardy_desc$"
@@ -1104,7 +1104,7 @@
  leader_trait_martinet_desc:0 "Managing planetary defenses means criminals have a hard time operating on the planet. This leader is especially troublesome for any potential gangs and dissidents."
  trait_ruler_recruiter_2:0 "$trait_ruler_recruiter$ II"
  trait_ruler_recruiter_2_desc:0 "$trait_ruler_recruiter_desc$"
- leader_trait_heavy_hitter:0 "Heavy Hitter"
+ leader_trait_heavy_hitter:0 "ตีแรง"
  leader_trait_heavy_hitter_desc:1 "This leader employs rapid dominance during ground combat."
  leader_trait_heavy_hitter_2:0 "$leader_trait_heavy_hitter$ II"
  leader_trait_heavy_hitter_2_desc:0 "$leader_trait_heavy_hitter_desc$"
@@ -1134,9 +1134,9 @@
  leader_trait_reinforcer_2:0 "Reinforcer II"
  leader_trait_reinforcer_desc_2:0 "$leader_trait_reinforcer_desc$"
  leader_trait_ftl_inhibitor:0 "$t$Adds Planetary §YFTL Inhibitor§!"
- leader_trait_guardian:0 "Guardian"
+ leader_trait_guardian:0 "กาเดียน"
  leader_trait_guardian_desc:1 "This leader focuses on maintaining starbase defenses to bolster system security."
- leader_trait_guardian_2:0 "Guardian II"
+ leader_trait_guardian_2:0 "กาเดียน II"
  leader_trait_guardian_2_desc:0 "$leader_trait_guardian_desc$"
  leader_trait_conscripter:1 "Conscription Agent"
  leader_trait_conscripter_desc:1 "This leader knows how to handle recruits and streamline the process of enlisting new volunteers into the army."
@@ -1166,7 +1166,7 @@
  leader_trait_victory_or_death_desc:1 "This leader has no respect for their soldiers' lives, willing to throw them away for honor and little else."
  leader_trait_disorganized:1 "สับสนวุ่นวาย"
  leader_trait_disorganized_desc:1 "This leader's lack of organizational skills causes their troops to function more like a war band than a proper military."
- leader_trait_lawless:1 "Corruption"
+ leader_trait_lawless:1 "คอรัปชั่น"
  leader_trait_lawless_desc:1 "This leader is in the pocket of local gangs and pirates."
  leader_trait_defence_engineer:0 "วิศวกรป้องกัน"
  leader_trait_defence_engineer_desc:0 "This leader focuses on making orbital defenses into an impenetrable wall of death against potential invasion forces."
