--- a/mod/thmod/localisation/english/paragon_3_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_3_l_english.yml
@@ -259,14 +259,14 @@
  vyctor_aggressive_expansion_plan_desc:1 "Battles are won with strategy, but strength remains the foundation of success. When applying force, it is best to do so resolutely."
  vyctor_improved_fleet_logistics:0 "Improved Fleet Logistics"
  vyctor_improved_fleet_logistics_desc:0 "Efficiency should not be underestimated: By optimizing the output of our shipyards, our expansion will be that much swifter."
- paragon.40410.name:0 "Drawn by Bloodshed"
- paragon.40410.desc:1 "§Y[Root.GetName]§! has won many battles. [Root.GetHeSheCap] once fought alongside another great warrior, $GIA_ZUMON_GREAT_WARRIOR_NAME$, who is looking for a new master to serve. He is a ruthless admiral, and [Root.GetFirstName] speaks highly of him."
- paragon.40410.a:0 "Glory awaits him if he joins us."
+ paragon.40410.name:0 "ละเลงเลือด"
+ paragon.40410.desc:1 "§Y[Root.GetName]§! ชนะการสู้รบหลายครั้ง ครั้งหนึ่ง [Root.GetHeSheCap]เคยต่อสู้เคียงข้างนักรบผู้ยิ่งใหญ่อีกคนหนึ่ง มีนามว่า $GIA_ZUMON_GREAT_WARRIOR_NAME$ ซึ่งกำลังมองหาเจ้านายคนใหม่ที่จะรับใช้ เขาเป็นพลเรือเอกที่โหดเหี้ยม และ [Root.GetFirstName] ก็ยกย่องเขามาก"
+ paragon.40410.a:0 "ความรุ่งโรจน์รอเขาอยู่ ถ้าเขามาร่วมกับเรา"
  paragon.40410.a.custom_tooltip:0 "พลเรือเอก Tzynn §Y$GIA_ZUMON_GREAT_WARRIOR_NAME$§! เข้าร่วมจักรวรรดิเราในฐานะ §Hผู้นำ§!"
- paragon.40410.b:1 "What can he teach us about war?"
+ paragon.40410.b:1 "เขาสอนอะไรเราเกี่ยวกับสงครามได้บ้าง?"
  GIA_ZUMON_GREAT_WARRIOR_NAME:0 "Hask'Guttra"
  GIA_ZUMON_GREAT_WARRIOR_DESC:1 "A ruthless admiral who has fought in many wars. [Root.GetHeSheCap] is said to be heartless, caring only for slaughter and destruction."
- gia_zumon_taught_warfare_by_great_warrior:0 "Trained by $GIA_ZUMON_GREAT_WARRIOR_NAME$"
+ gia_zumon_taught_warfare_by_great_warrior:0 "ถูกฝึกฝนโดย $GIA_ZUMON_GREAT_WARRIOR_NAME$"
  gia_zumon_taught_warfare_by_great_warrior_desc:1 "Our fleets have benefited from the knowledge of the great warrior, $GIA_ZUMON_GREAT_WARRIOR_NAME$."
  paragon.40420.name:0 "Blood and Sand"
  paragon.40420.desc:1 "§Y[Root.GetName]§! is restless and craves a fight. [Root.GetHeSheCap] has had enough of the weaklings that plague [coliseum_planet.GetName]. [Root.GetHeSheCap] has proposed an arena where glory-hunters may be pitted against criminals. Such a plan is sure to provide our warriors with valuable training."
