--- a/mod/thmod/localisation/english/paragon_4_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_4_l_english.yml
@@ -25,9 +25,9 @@
  leader_trait_embezzler_hive_desc:1 "This drone has a physiological irregularity that causes it to use a wasteful amount of energy."
  leader_trait_embezzler_machine:0 "Energy Loss"
  leader_trait_embezzler_machine_desc:0 "This unit has a systems defect which causes it to consume an unusually high amount of energy."
- leader_trait_gullible_hive:0 "Data Leak"
+ leader_trait_gullible_hive:0 "ข้อมูลรั่วไหล"
  leader_trait_gullible_hive_desc:1 "This node's trusting nature causes significant security weaknesses."
- leader_trait_gullible_machine:0 "Data Leak"
+ leader_trait_gullible_machine:0 "ข้อมูลรั่วไหล"
  leader_trait_gullible_machine_desc:0 "This node has a significant security weakness in its operating system."
  leader_trait_bureaucratic_hive:0 "Communication Disruptions"
  leader_trait_bureaucratic_hive_desc:1 "This node experiences communication disruptions when merging the greater consciousness with individuated drones."
@@ -347,17 +347,17 @@
  leader_trait_dreaded_2_hive_desc:0 "$leader_trait_dreaded_hive_desc$"
  leader_trait_dreaded_2_machine:0 "$leader_trait_dreaded_machine$ II"
  leader_trait_dreaded_2_machine_desc:0 "$leader_trait_dreaded_machine_desc$"
- leader_trait_hardy_hive:1 "Hardiness"
+ leader_trait_hardy_hive:1 "ความแข็งแกร่ง"
  leader_trait_hardy_hive_desc:1 "Armies controlled by this drone are heavily resistant to damage."
- leader_trait_hardy_machine:1 "Hardiness"
+ leader_trait_hardy_machine:1 "ความแข็งแกร่ง"
  leader_trait_hardy_machine_desc:1 "Armies controlled by this unit are heavily resistant to damage."
  leader_trait_hardy_2_hive:0 "$leader_trait_hardy_hive$ II"
  leader_trait_hardy_2_hive_desc:0 "$leader_trait_hardy_hive_desc$"
  leader_trait_hardy_2_machine:0 "$leader_trait_hardy_machine$ II"
  leader_trait_hardy_2_machine_desc:0 "$leader_trait_hardy_machine_desc$"
- leader_trait_heavy_hitter_hive:0 "Heavy Hitter"
+ leader_trait_heavy_hitter_hive:0 "ตีแรง"
  leader_trait_heavy_hitter_hive_desc:1 "This drone uses heavy assault tactics to inflict immense damage to the enemy."
- leader_trait_heavy_hitter_machine:0 "Heavy Hitter"
+ leader_trait_heavy_hitter_machine:0 "ตีแรง"
  leader_trait_heavy_hitter_machine_desc:1 "This unit uses heavy assault tactics to inflict immense damage on the enemy."
  leader_trait_heavy_hitter_2_hive:0 "$leader_trait_heavy_hitter_hive$ II"
  leader_trait_heavy_hitter_2_hive_desc:0 "$leader_trait_heavy_hitter_hive_desc$"
@@ -415,9 +415,9 @@
  leader_trait_reinforcer_2_hive_desc:0 "$leader_trait_reinforcer_hive_desc$"
  leader_trait_reinforcer_2_machine:0 "$leader_trait_reinforcer_machine$ II"
  leader_trait_reinforcer_2_machine_desc:0 "$leader_trait_reinforcer_machine_desc$"
- leader_trait_guardian_hive:0 "Guardian"
+ leader_trait_guardian_hive:0 "กาเดียน"
  leader_trait_guardian_hive_desc:1 "This drone controls the Starbase and the Defensive Platforms in the system, increasing their defensive capabilities."
- leader_trait_guardian_machine:0 "Guardian"
+ leader_trait_guardian_machine:0 "กาเดียน"
  leader_trait_guardian_machine_desc:0 "This unit uplinks itself to the Starbase and the Defensive Platforms in the system, increasing their defensive capabilities."
  leader_trait_guardian_2_hive:0 "$leader_trait_guardian_hive$ II"
  leader_trait_guardian_2_hive_desc:0 "$leader_trait_guardian_hive_desc$"
