--- a/mod/thmod/localisation/english/paragon_l_english.yml
+++ b/mod/thmod/localisation/english/paragon_l_english.yml
@@ -602,10 +602,10 @@
  paragon.1025.name:0 "Scientific Progress"
  paragon.1025.desc:1 "As a direct result of §Y[event_target:leader_event_target.GetName]§!'s astounding scientific discoveries, the rate at which we conduct research has accelerated. [event_target:leader_event_target.GetHisHerCap] findings are a hot topic in the scientific community, which now recognizes [event_target:leader_event_target.GetName] as a thought leader."
  paragon.1025.a:1 "These developments will benefit all."
- paragon.1030.name:0 "Leaked Information"
- paragon.1030.desc:1 "A significant data leak has occurred, exposing sensitive information and crucial security details to the public. The files include schematics of military installations, details of neural interface experiments, and proof of surveillance of several prominent figures in the opposition.\n\n§Y[root.GetName]§! has been identified as the one responsible for this disaster."
- paragon.1030.a:0 "Mistakes happen."
- paragon.1030.b:1 "They must be held accountable."
+ paragon.1030.name:0 "ข้อมูลรั่วไหล"
+ paragon.1030.desc:1 "ข้อมูลสำคัญรั่วไหล โดยเปิดเผยข้อมูลที่ละเอียดอ่อนและรายละเอียดด้านความปลอดภัยที่สำคัญต่อสาธารณะ ไฟล์ดังกล่าวประกอบด้วยแผนผังสถานตั้งของกองทัพ รายละเอียดการทดลองเชื่อมต่อระบบประสาทและหลักฐานการสอดแนมบุคคลสำคัญหลายราย\n\n§Y[root.GetName]§! ถูกระบุว่าเป็นผู้รับผิดชอบต่อเหตุการณ์นี้"
+ paragon.1030.a:0 "ความผิดพลาดเกิดขึ้นได้"
+ paragon.1030.b:1 "พวกเขาจะต้องรับผิดชอบ"
  paragon.1035.name:0 "Trendsetter"
  paragon.1035.desc:1 "§Y[event_target:leader_event_target.GetName]§! has become a trendsetter among the general population. Everything from [event_target:leader_event_target.GetHisHer] style to [event_target:leader_event_target.GetHisHer] method of speech has attracted a sizable following. [event_target:leader_event_target.GetHisHerCap] reach extends across all socioeconomic strata, but [event_target:leader_event_target.GetSheHe] has proven particularly popular among the youth."
  paragon.1035.a:1 "We have no reason not to support this."
@@ -620,7 +620,7 @@
  paragon.1050.desc:1 "§Y[root.GetName]§! is at the center of a major scandal reverberating throughout the empire. There are numerous reports of aberrant behavior, embezzlement, and cover-ups. This has led many to question the competence of those in authority.\n\nThe effects on the public mood will undoubtedly be felt for years to come. Many believe that the only way to restore faith in the system is for [root.GetName] to step down and face prosecution."
  paragon.1050.a:1 "An unfortunate accusation."
  paragon.1050.b:1 "Dismiss this leader."
- paragon_leader_dismissed_tooltip:0 "§Y[root.GetClass] [root.GetName]§! is dismissed."
+ paragon_leader_dismissed_tooltip:0 "§Y[root.GetClass] [root.GetName]§! ถูกปลด"
  paragon_efficient_council:0 "Efficient Council"
  paragon_efficient_council_desc:1 "The council is strengthened by the removal of a negative participant."
  paragon_dysfunctional_council:0 "Dysfunctional Council"
@@ -637,9 +637,9 @@
  paragon_unified_council_desc:1 "Our council is unified in their goals."
  paragon_scientific_progress:0 "Scientific Progress"
  paragon_scientific_progress_desc:1 "Thanks to the recent upswing in the scientific community, our researchers are more motivated to work on experiments and new technologies."
- paragon_data_leak:0 "Severe Data Leak"
+ paragon_data_leak:0 "ข้อมูลรั่วไหลอย่างรุนแรง"
  paragon_data_leak_desc:1 "Our society is in uproar as the amateur responsible for the leak is still working as a high-ranking government official."
- paragon_data_leak_punished:0 "Data Leak"
+ paragon_data_leak_punished:0 "ข้อมูลรั่วไหล"
  paragon_data_leak_punished_desc:0 "Due to recent document leaks, our security systems are compromised and need a total overhaul."
  paragon_stylish_trends:0 "Stylish Trends"
  paragon_stylish_trends_desc:1 "Aesthetics fads come and go, spreading rapidly among our citizens, and dissipating just as quickly."
