--- a/mod/thmod/localisation/english/pop_factions_l_english.yml
+++ b/mod/thmod/localisation/english/pop_factions_l_english.yml
@@ -28,9 +28,9 @@
  SUPREMACIST_RULER_SAME_SPECIES:0 "[Root.Owner.GetSpeciesName] [Root.Owner.GetRulerTitle]"
  SUPREMACIST_RULER_NOT_SAME_SPECIES:0 "[Root.Owner.GetRulerTitle] เป็นพวกต่างดาว"
  SUPREMACIST_RULER_NOT_SAME_SPECIES_DESC:0 "[Root.GetName] ต้องการให้ผู้ปกครองของเราเป็นเผ่าพันธุ์เดียวกับพวกเขา และจะโกรธเคืองเมื่อผู้ที่ไม่ใช่เผ่า [Root.Owner.GetSpeciesName] ดำรงตำแหน่ง [Root.Owner.GetRulerTitle]"
- SUPREMACIST_COUNCIL_SAME_SPECIES1: "Homogeneous Council"
- SUPREMACIST_COUNCIL_NOT_SAME_SPECIES1: "Xenos on the Council"
- SUPREMACIST_COUNCIL_NOT_SAME_SPECIES_DESC1: "The [Root.GetName] want our Council to be homogeneous and will be angered by any non-[Root.Owner.GetSpeciesName] on the council."
+ SUPREMACIST_COUNCIL_SAME_SPECIES1: "สภาที่เป็นเนื้อเดียวกัน"
+ SUPREMACIST_COUNCIL_NOT_SAME_SPECIES1: "ต่างดาวในสภา"
+ SUPREMACIST_COUNCIL_NOT_SAME_SPECIES_DESC1: "[Root.GetName] ต้องการให้สภาของเราเป็นเนื้อเดียวกัน และจะไม่พอใจ การที่มีคนที่ ไม่ใช่-[Root.Owner.GetSpeciesName] อยู่ในสภา"
  SUPREMACIST_COUNCIL_SAME_SPECIES2: "$SUPREMACIST_COUNCIL_SAME_SPECIES1$"
  SUPREMACIST_COUNCIL_NOT_SAME_SPECIES2: "$SUPREMACIST_COUNCIL_NOT_SAME_SPECIES1$"
  SUPREMACIST_COUNCIL_NOT_SAME_SPECIES_DESC2: "$SUPREMACIST_COUNCIL_NOT_SAME_SPECIES_DESC1$"
@@ -153,7 +153,7 @@
  XENOIST_OPPRESSIVE_SUBJUGATION_POLICY:0 "มีนโยบายกดขี่ (เมื่ออีกฝ่ายแพ้สงคราม)"
  XENOIST_NO_OPPRESSIVE_SUBJUGATION_POLICY:0 "$XENOIST_OPPRESSIVE_SUBJUGATION_POLICY$"
  XENOIST_OPPRESSIVE_SUBJUGATION_POLICY_DESC:0 "Our mission should be to bring enlightenment and prosperity to the galaxy. Subjects should be nurtured, and exploiting them will displease the [Root.GetName]."
- XENOIST_BENEVOLENT_SUBJUGATION_POLICY:0 "Benevolent Subjugation Policy"
+ XENOIST_BENEVOLENT_SUBJUGATION_POLICY:0 "นโยบายปกครองบริวารด้วยความเมตตา"
  XENOIST_ADOPT_BENEVOLENT_SUBJUGATION_POLICY:0 "$XENOIST_BENEVOLENT_SUBJUGATION_POLICY$"
  XENOIST_BENEVOLENT_SUBJUGATION_POLICY_DESC:0 "Taking care of our subjects and helping them grow will please the [Root.GetName]."
  XENOIST_XENOLOGICAL_CONSERVATION:0 "Xeno Zoological Conservation"
@@ -198,7 +198,7 @@
  IMPERIALIST_PEACEFUL_APPLICATIONS:0 "เสียศิลปวัตถุ"
  IMPERIALIST_NO_PEACEFUL_APPLICATIONS:0 "$IMPERIALIST_PEACEFUL_APPLICATIONS$"
  IMPERIALIST_PEACEFUL_APPLICATIONS_DESC:0 "Wasting Minor Artifacts on trivialities will displease the [Root.GetName] for a time."
- IMPERIALIST_BENEVOLENT_SUBJUGATION_POLICY:0 "Benevolent Subjugation Policy"
+ IMPERIALIST_BENEVOLENT_SUBJUGATION_POLICY:0 "นโยบายปกครองบริวารด้วยความเมตตา"
  IMPERIALIST_NO_BENEVOLENT_SUBJUGATION_POLICY:0 "$IMPERIALIST_BENEVOLENT_SUBJUGATION_POLICY$"
  IMPERIALIST_BENEVOLENT_SUBJUGATION_POLICY_DESC:0 "The strong rule; the weak serve. Showing compassion towards our subjects will upset the [Root.GetName]."
  IMPERIALIST_OPPRESSIVE_SUBJUGATION_POLICY:0 "มีนโยบายกดขี่ (เมื่ออีกฝ่ายแพ้สงคราม)"
@@ -375,9 +375,9 @@
  PROGRESSIVE_SOCIAL_EQUALITY:0 "เป็นพลเมืองที่เท่าเทียมกัน"
  PROGRESSIVE_SOCIAL_EQUALITY_DESC:0 "Ensuring that all species in our empire enjoy Full Citizenship status will please the [Root.GetName]."
  PROGRESSIVE_NO_SOCIAL_EQUALITY:0 "$PROGRESSIVE_SOCIAL_EQUALITY$"
- PROGRESSIVE_BENEVOLENT_SUBJUGATION_POLICY:0 "Benevolent Subjugation Policy"
+ PROGRESSIVE_BENEVOLENT_SUBJUGATION_POLICY:0 "นโยบายปกครองบริวารด้วยความเมตตา"
  PROGRESSIVE_BENEVOLENT_NO_OPPRESSIVE_SUBJUGATION_POLICY:0 "$PROGRESSIVE_BENEVOLENT_SUBJUGATION_POLICY$"
- PROGRESSIVE_BENEVOLENT_NO_OPPRESSIVE_SUBJUGATION_POLICY_DESC:0 "Our subjects look to us for guidance and protection, and we should strive to repay their trust by respecting their liberties. Adopting a benevolent approach to subjugation will please the [Root.GetName]."
+ PROGRESSIVE_BENEVOLENT_NO_OPPRESSIVE_SUBJUGATION_POLICY_DESC:0 "เมืองขึ้น/บริวารของเราต้องการคำแนะนำและการปกป้องจากเราและเราควรพยายามตอบแทนความไว้วางใจของพวกเขาด้วยการเคารพเสรีภาพของพวกเขา การใช้แนวทางเมตตากรุณาในการปกครอง(นโยบายกดขี่เมื่อชนะสงคราม)จะทำให้ [Root.GetName] พอใจ"
  PROGRESSIVE_FEDERATION:0 "$hegemony_federation$"
  PROGRESSIVE_FEDERATION_NOT_HEGEMONY:0 "$hegemony_federation$"
  PROGRESSIVE_FEDERATION_DESC:0 "Being a member of a $hegemony_federation$ will displease the [Root.GetName]."
@@ -411,7 +411,7 @@
  TOTALITARIAN_UNDERLING:0 "ตกอยู่ภายใต้การบังคับบัญชา"
  TOTALITARIAN_NOT_UNDERLING:0 "$TOTALITARIAN_UNDERLING$"
  TOTALITARIAN_UNDERLING_DESC:0 "Being the subject of a foreign §YOverlord§! will displease the [Root.GetName]."
- TOTALITARIAN_BENEVOLENT_SUBJUGATION_POLICY:0 "Benevolent Subjugation Policy"
+ TOTALITARIAN_BENEVOLENT_SUBJUGATION_POLICY:0 "นโยบายปกครองบริวารด้วยความเมตตา"
  TOTALITARIAN_NO_BENEVOLENT_SUBJUGATION_POLICY:0 "$TOTALITARIAN_BENEVOLENT_SUBJUGATION_POLICY$"
  TOTALITARIAN_BENEVOLENT_SUBJUGATION_POLICY_DESC:0 "A firm [Owner.Species.GetHandName] is required to guide our subjects, lest they grow indolent and complacent. Granting them too many liberties will displease the [Root.GetName]."
  TOTALITARIAN_OPPRESSIVE_SUBJUGATION_POLICY:1 "มีนโยบายกดขี่ (เมื่ออีกฝ่ายแพ้สงคราม)"
@@ -530,7 +530,7 @@
  POP_FACTION_NATIONALIST_DEMAND_DESC:0 "Return all planets with pops belong to this faction to the §H[parameter:country.GetName]§!."
  POP_FACTION_NATIONALIST_SABOTAGE_TITLE:0 "Sabotage"
  POP_FACTION_NATIONALIST_SABOTAGE_DESC:0 "Members of this Faction §Rruin§! a Building."
- POP_FACTION_NATIONALIST_CORRUPTION_TITLE:0 "Corruption"
+ POP_FACTION_NATIONALIST_CORRUPTION_TITLE:0 "คอรัปชั่น"
  POP_FACTION_NATIONALIST_CORRUPTION_DESC:1 "Output reduced on all planets with Pops belonging to this Faction."
  POP_FACTION_NATIONALIST_REBELLION_TITLE:0 "กบฏ"
  POP_FACTION_NATIONALIST_REBELLION_DESC:1 "$POP_FACTION_PLANET_SEPARATIST_REBELLION_DESC$"
