--- a/mod/thmod/localisation/english/scripted_loc_l_english.yml
+++ b/mod/thmod/localisation/english/scripted_loc_l_english.yml
@@ -103,9 +103,9 @@
  hundredplus:0 "100+"
  gray_goo_world_active_nanites:0 "Swarming with active nanites, this world is in constant flux as the lithosphere and atmosphere are endlessly reprocessed."
  gray_goo_world_inactive_nanites:0 "A chaotic and inhospitable world, disfigured according to some mad design."
- submantle_sub:0 "subterranean"
+ submantle_sub:0 "ใต้ดิน"
  submantle_mantle:0 "mantle-dwelling"
- SubMantle_Sub:0 "Subterranean"
+ SubMantle_Sub:0 "ใต้ดิน"
  SubMantle_Mantle:0 "Mantle-Dwelling"
  getmechanical: "mechanical"
  getbiological: "biological"
