--- a/mod/thmod/localisation/english/traditions_l_english.yml
+++ b/mod/thmod/localisation/english/traditions_l_english.yml
@@ -272,7 +272,7 @@
  MESSAGE_FAVOR_GAINED_TRADITION_TITLE:0 "ได้รับบุญคุณ/การสนับสนุน"
  MESSAGE_FAVOR_GAINED_TRADITION_DESC:0 "ต้องขอบคุณทักษะของทูตของเรา เราจึงได้รับได้รับการสนับสนุนจาก $WHO|Y$"
  tr_diplomacy_finish:0 "วัฒนธรรมการทูตสำเร็จ"
- tr_diplomacy_federation_xp_gain: "ค่าประสบการณ์สหพันธ์ต่อเดือน: §G+2§!\nน้ำหนักทางการทูต: §G+10§!\nทูตที่มี: §G+1§!\nปลดล็อกการยกระดับ: §G+1§!"
+ tr_diplomacy_federation_xp_gain: "ค่าประสบการณ์สหพันธ์ต่อเดือน: §G+2§!\nน้ำหนักทางการทูต: §G+10%§!\nทูตที่มี: §G+1§!\nปลดล็อกการยกระดับ: §G+1§!"
  diplo_fed_xpboost: "$tr_diplomacy_finish$"
  tradition_adaptability:0 "การปรับตัว"
  tradition_adaptability_desc:0 "การปรับตัวคือการอยู่รอดและเหนือกว่า"
@@ -281,7 +281,7 @@
  tr_adaptability_dietary_enrichment_desc:1 "£food£ §Y$mod_country_food_produces_mult$§! ผลผลิตเพิ่มขึ้น §G+10%§!"
  tr_adaptability_dietary_enrichment_delayed:1 "The nutritional value of the nourishments we harvest for our populations can be increased through various enrichment techniques, enabling us to feed more mouths with less food."
  tr_adaptability_recycling:0 "ปรับปรุงการรีไซเคิล"
- tr_adaptability_recycling_desc:1 "§Yสิ่งปลูกสร้าง§! และ §Yเขต§! $r_strategic$ มี §Yค่าใช้จ่าย§! และ §Yค่าบำรุงรักษา§! ลดลง §G-10%§!"
+ tr_adaptability_recycling_desc:1 "§Yสิ่งปลูกสร้าง§! และ §Yเขต§! $r_strategic$ มี §Yค่าใช้จ่าย§! และ §Yค่าบำรุงรักษา§! ลดลง §G-15%§!"
  tr_adaptability_recycling_delayed:0 "การนำสิ่งที่ล้าสมัยกลับมาใช้ใหม่ทำให้เราสามารถสร้างอนาคตได้มากขึ้น"
  tr_adaptability_survival_fittest:0 "ผู้ที่แข็งแรงที่สุดจึงจะอยู่รอด"
  tr_adaptability_survival_fittest_desc:3 "§Y$MOD_PLANET_ORBITAL_BOMBARDMENT_DAMAGE$§! ลดลง §G25%§! และ §Y$MOD_ARMY_DEFENSE_DAMAGE_MULT$§! เพิ่มขึ้น §G+25%§!"
