--- a/mod/thmod/localisation/english/triggers_effects_l_english.yml
+++ b/mod/thmod/localisation/english/triggers_effects_l_english.yml
@@ -1121,10 +1121,10 @@
  SET_CAPITAL_EFFECT:0 "Sets planet to capital of owner\n"
  SET_CAPITAL_REMOVE_EFFECT:0 "Removes planet as capital of owner\n"
  CHANGE_PC_EFFECT:0 "เปลี่ยนคลาส(ประเภท)ดาวเคราะห์เป็น $CLASS|Y$\n"
- KILL_POP_EFFECT:0 "Dies\n"
- RESETTLE_POP_EFFECT:0 "Is resettled to $PLANET|Y$"
- ENSLAVE_POP_EFFECT:0 "Enslaved\n"
- EMANCIPATE_POP_EFFECT:0 "Emancipated\n"
+ KILL_POP_EFFECT:0 "ตาย\n"
+ RESETTLE_POP_EFFECT:0 "ถูกย้ายถิ่นฐานใหม่ไปดาว $PLANET|Y$"
+ ENSLAVE_POP_EFFECT:0 "ตกเป็นทาส\n"
+ EMANCIPATE_POP_EFFECT:0 "ได้รับการปลดปล่อย\n"
  DESTROY_COLONY_EFFECT:1 "§RColony is destroyed§!\n"
  REROLL_BLOCKERS_EFFECT:0 "Re-roll tile blockers\n"
  REROLL_DEPOSITS_EFFECT:0 "Re-roll tile resources\n"
@@ -1148,7 +1148,7 @@
  CREATE_WORMHOLE_STATION:0 "Create a wormhole station\n"
  UNLOCKS_NEXT_TECH:0 "Unlocks technology $TECH|Y$ in the $TREE|Y$ Tree.\n"
  ALL_OWNED_POPS:1 "All Owned Pops"
- CHANGE_NAME:1 "Changes the name of the $SCOPE|Y$"
+ CHANGE_NAME:1 "เปลี่ยนชื่อของ $SCOPE|Y$"
  CHANGE_ADJECTIVE:0 "Sets the adjective of the $SCOPE|Y$"
  CHANGE_SHIP_PREFIX:0 "Sets the ship prefix of the $SCOPE|Y$"
  ADD_TECHNOLOGY:0 "Adds a random technology in the $TECHAREA|Y$ tree."
@@ -1170,7 +1170,7 @@
  ROUND_VARIABLE_TO:0 "Rounds the $VAR|Y$ variable to the closest $VALUE|Y$."
  VARIABLE_IS_SET_TRIGGER:0 "Variable $VAR|Y$ is set."
  VARIABLE_IS_NOT_SET_TRIGGER:0 "Variable $VAR|Y$ is NOT set."
- TYPE_EVENT:2 "The event '§Y$WHICH$§!' happens$TIME$.\n"
+ TYPE_EVENT:2 "จะเกิดเหตุการณ์ '§Y$WHICH$§!' ขึ้น$TIME$\n"
  TYPE_EVENT_ONLY_DAYS:0 " ใน $WHEN|Y$"
  TYPE_EVENT_ONLY_RANDOM_DAYS:0 " ใน §Y0 ถึง $WHEN$§!"
  TYPE_EVENT_ONLY_RANDOM_DAYS2:0 " ใน §Y0 วันถึง $WHEN$§!"
@@ -1340,9 +1340,9 @@
  EVERY_OWNED_FLEET_EFFECT:0 "\nAll owned Fleets:"
  RESEARCH_LEADER_TRIGGER:0 "Research Leader"
  START_PURGE_PLANET_EFFECT:0 "Purge all Pops on $PLANET|Y$"
- START_PURGE_POP_EFFECT:0 "Purge $POP|Y$ on $PLANET|Y$"
+ START_PURGE_POP_EFFECT:0 "กวาดล้าง $POP|Y$ ที่ดาว $PLANET|Y$"
  STOP_PURGE_PLANET_EFFECT:0 "Stop purge of Pops on $PLANET|Y$"
- STOP_PURGE_POP_EFFECT:0 "Stop purge of $POP|Y$ on $PLANET|Y$"
+ STOP_PURGE_POP_EFFECT:0 "หยุดกวาดล้าง $POP|Y$ ที่ดาว $PLANET|Y$"
  HAS_FACTION:0 "มีกลุ่มการเมือง $TYPE|Y$"
  HAS_NOT_FACTION:0 "ไม่มีกลุ่มการเมือง $TYPE|Y$"
  VALUE_LESS_THAN:0 "less than "
@@ -1476,7 +1476,7 @@
  EMPIRE_SPRAWL_CAP_FRACTION_TRIGGER:0 "$EMPIRE_SIZE$ is $COMPARE$ $VAL|Y$ of Administration Capacity"
  FOOD_TRIGGER:0 "อาหาร $COMPARE$ $VAL|Y$"
  FOOD_TRIGGER_NOT:0 "อาหารไม่ $COMPARE$ $VAL|Y$"
- CLOSE_BRANCH_OFFICE_EFFECT:0 "Close down the $ADJ|Y$ Branch Office\n"
+ CLOSE_BRANCH_OFFICE_EFFECT:0 "ปิดสำนักงานสาขา $ADJ|Y$\n"
  ESTABLISH_BRANCH_OFFICE_EFFECT:0 "$COUNTRY|Y$ establishes a new Branch Office"
  SET_PLAYER_EFFECT:0 "$OLD|Y$ will switch to playing $NEW|Y$"
  TRIGGER_POP_CAN_REPRODUCE:0 "Pop can reproduce"
