--- a/mod/thmod/localisation/english/utopia_ascension_l_english.yml
+++ b/mod/thmod/localisation/english/utopia_ascension_l_english.yml
@@ -59,9 +59,9 @@
  utopia.2602.b:0 "Psychic powers? What a crock!"
  utopia.2602.c:0 "Their sorcery will not be enough to save them."
  utopia.2602.d:0 "Yes... yes, we can sense their psychic emanations."
- utopia.2605.name:0 "[psionic_leader.GetTitle] Revealed as Psychic"
- utopia.2605.desc:0 "While it is rare for psionic powers to manifest after adolescence, it is not unheard of. [psionic_leader.GetTitle] [psionic_leader.GetName] has recently been displaying abilities that were suspected to be psionic in nature. After undergoing a thorough ESP test, [psionic_leader.GetSheHe] [psionic_leader.GetHasHave] been identified as a class 4 psionic talent."
- utopia.2605.a:0 "These new abilities will serve us well."
+ utopia.2605.name:0 "[psionic_leader.GetTitle] เปิดเผยว่ามีญาณทิพย์"
+ utopia.2605.desc:0 "แม้ว่าจะเป็นเรื่องยากที่พลังจิตจะแสดงออกมาหลังวัยรุ่น แต่ก็ไม่เคยได้ยินมาก่อน [psionic_leader.GetTitle] [psionic_leader.GetName] เพิ่งแสดงความสามารถที่สงสัยว่าพลังจิตโดยธรรมชาติ หลังจากผ่านการทดสอบ ESP อย่างละเอียดแล้ว [psionic_leader.GetSheHe] [psionic_leader.GetHasHave] ถูกระบุว่ามีพรสวรรค์พลังจิตระดับ 4"
+ utopia.2605.a:0 "ความสามารถใหม่เหล่านี้จะรับใช้เราได้เป็นอย่างดี"
  utopia.2652.name:0 "[From.GetSpeciesNamePlural] Awaken Psionic Abilities"
  utopia.2652.desc:0 "All [From.GetSpeciesNamePlural] throughout the galaxy have undergone a great change. Whereas before their latent psionic power had only blossomed in a small minority, the entire species has now unlocked its full psychic potential.\n\nAlthough these changes seem to have originated in the [From.GetName], they have now manifested in all members of their species regardless of where they reside. Aside from displaying an array of powerful psionic abilities, [From.GetSpeciesNamePlural] have started to forgo verbal communication with each other in favor of telepathy."
  utopia.2652.b:0 "There has to be a scientific explanation for this."
@@ -106,7 +106,7 @@
  utopia.3024.a:0 "It must be stopped!"
  utopia.3026.name:0 "Shroud Avatar Banished"
  utopia.3026.desc:0 "The continual atrophy of existing in normal space has weakened the Avatar in the [shroud_spawn_system.GetName] system to the point where it can no longer maintain its tangible form. It has been banished back into the Shroud."
- utopia.3026.a:0 "Good riddance."
+ utopia.3026.a:0 "โชคดีนะ"
  exit.shroud:0 "ออกจากดินแดนพลังจิตบริสุทธิ์"
  shroud_army:0 "อวตารพลังจิต"
  shroud_army_desc:0 "A colossal warrior from the Shroud that has been forged out of pure psionic energy."
