--- a/mod/thmod/localisation/english/utopia_megastructures_l_english.yml
+++ b/mod/thmod/localisation/english/utopia_megastructures_l_english.yml
@@ -58,7 +58,7 @@
  utopia.23.b:0 "Better not disturb them."
  utopia.25.name:0 "A Shocking Revelation"
  utopia.25.desc:0 "To everyone's amazement, the ring world has erupted into a flurry of color as thousands of space worms, or as it seems, larvae, are transforming into butterflies. Likely the change has been brought on by the generation of an atmosphere.\n\nUnfortunately, celebrations have been cut short by the discovery of a subterranean network of tunnels, in which Coo-coos were caught feeding off the remains of several missing workers.\n\nConstruction has been halted till the creatures have been exterminated, but we expect swift results as the workers are highly motivated. The true nature of the Coo-coo has been revealed."
- utopia.25.a:0 "Good riddance."
+ utopia.25.a:0 "โชคดีนะ"
  utopia.26.name:0 "A Shocking Revelation"
  utopia.26.desc:0 "The extermination team's efforts to rid the ring world of the giant space worms known as Coo-coos, have been aggravated by violent protests from the construction workers.\n\nIn a desperate attempt to hide his pet, one young man even ventured far enough outside the build site, that he stumbled upon a subterranean network of freshly dug tunnels, where he caught several Coo-coos feeding off the remains of his missing co-workers. After narrowly escaping from his beloved pet, as it tried to spray him with digestive fluids, he alerted the extermination team, which has made short work of the carnivorous worms.\n\nAnd so the true nature of the Coo-coo has finally been revealed."
  utopia.26.a:0 "What a grisly turn of events."
