--- a/mod/thmod/localisation/english/civic_and_origin_concepts_l_english.yml
+++ b/mod/thmod/localisation/english/civic_and_origin_concepts_l_english.yml
@@ -12,7 +12,7 @@
  i_engineering: "£engineering£ §I$engineering_research$§!"
  i_amenities: "£amenities£ §IAmenities§!"
  i_trade_value: "£trade_value£ §ITrade Value§!"
- i_loyalty: "£loyalty£ §IMonthly Loyalty§!"
+ i_loyalty: "£loyalty£ §Iความภักดีต่อเดือน§!"
  i_rare_crystals: "£rare_crystals£ §I$rare_crystals$§!"
  i_volatile_motes: "£volatile_motes£ §I$volatile_motes$§!"
  i_exotic_gases: "£exotic_gases£ §I$exotic_gases$§!"
@@ -25,7 +25,7 @@
  i_strategic_plural: "£rare_crystals£ £exotic_gases£ £volatile_motes£ §IStrategic Resources§!"
  i_stability: "£mod_planet_stability_add£ §I$PLANET_STABILITY_TITLE$§!"
  i_naval_capacity: "£mod_country_naval_cap_add£ §Iความจุของยานรบ§!"
- i_defense_armies: "£defense_army£ §IDefense Armies§!"
+ i_defense_armies: "£defense_army£ §Iกองทัพป้องกัน§!"
  i_unlocks_building: "§Iปลดล็อกสิ่งปลูกสร้าง:§!"
  i_unlocks_feature: "§Iปลดล็อกคุณสมบัติ:§!"
  i_unlocks_orbital: "§Iปลดล็อกที่อยู่อาศัยโคจรดาว:§!"
